@@ -16,26 +16,28 @@
 package com.github.benmanes.caffeine.cache;
 
 import static com.github.benmanes.caffeine.cache.Specifications.BOUNDED_LOCAL_CACHE;
-import static com.github.benmanes.caffeine.cache.Specifications.BUILDER_PARAM;
-import static com.github.benmanes.caffeine.cache.Specifications.CACHE_LOADER_PARAM;
 import static com.github.benmanes.caffeine.cache.Specifications.kTypeVar;
 import static com.github.benmanes.caffeine.cache.Specifications.vTypeVar;
+import static com.google.common.base.Preconditions.checkState;
+import static com.google.common.collect.ImmutableList.toImmutableList;
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.Objects.requireNonNull;
 
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Year;
+import java.time.ZoneId;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.NavigableMap;
 import java.util.Set;
 import java.util.TreeMap;
+import java.util.spi.ToolProvider;
+import java.util.stream.Stream;
 
-import javax.lang.model.element.Modifier;
-
-import com.github.benmanes.caffeine.cache.local.AddCacheLoader;
 import com.github.benmanes.caffeine.cache.local.AddConstructor;
 import com.github.benmanes.caffeine.cache.local.AddDeques;
 import com.github.benmanes.caffeine.cache.local.AddExpirationTicker;
@@ -44,23 +46,21 @@ import com.github.benmanes.caffeine.cache.local.AddExpireAfterWrite;
 import com.github.benmanes.caffeine.cache.local.AddFastPath;
 import com.github.benmanes.caffeine.cache.local.AddKeyValueStrength;
 import com.github.benmanes.caffeine.cache.local.AddMaximum;
+import com.github.benmanes.caffeine.cache.local.AddPacer;
 import com.github.benmanes.caffeine.cache.local.AddRefreshAfterWrite;
 import com.github.benmanes.caffeine.cache.local.AddRemovalListener;
 import com.github.benmanes.caffeine.cache.local.AddStats;
 import com.github.benmanes.caffeine.cache.local.AddSubtype;
-import com.github.benmanes.caffeine.cache.local.AddWriteQueue;
 import com.github.benmanes.caffeine.cache.local.Finalize;
 import com.github.benmanes.caffeine.cache.local.LocalCacheContext;
 import com.github.benmanes.caffeine.cache.local.LocalCacheRule;
-import com.google.common.base.Preconditions;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Sets;
-import com.squareup.javapoet.AnnotationSpec;
+import com.google.common.io.Resources;
 import com.squareup.javapoet.ClassName;
 import com.squareup.javapoet.JavaFile;
-import com.squareup.javapoet.MethodSpec;
 import com.squareup.javapoet.ParameterizedTypeName;
 import com.squareup.javapoet.TypeName;
 import com.squareup.javapoet.TypeSpec;
@@ -71,133 +71,127 @@ import com.squareup.javapoet.TypeSpec;
  * @author ben.manes@gmail.com (Ben Manes)
  */
 public final class LocalCacheFactoryGenerator {
-  final Feature[] featureByIndex = new Feature[] {null, null, Feature.LOADING, Feature.LISTENING,
-      Feature.STATS, Feature.MAXIMUM_SIZE, Feature.MAXIMUM_WEIGHT, Feature.EXPIRE_ACCESS,
-      Feature.EXPIRE_WRITE, Feature.REFRESH_WRITE, Feature.FASTPATH};
-  final List<LocalCacheRule> rules = ImmutableList.of(new AddSubtype(), new AddConstructor(),
-      new AddKeyValueStrength(), new AddCacheLoader(), new AddRemovalListener(),
-      new AddStats(), new AddExpirationTicker(), new AddMaximum(), new AddFastPath(),
-      new AddDeques(), new AddExpireAfterAccess(), new AddExpireAfterWrite(),
-      new AddRefreshAfterWrite(), new AddWriteQueue(), new Finalize());
-  final NavigableMap<String, ImmutableSet<Feature>> classNameToFeatures;
-  final Path directory;
+  private final Feature[] featureByIndex = { null, null, Feature.LISTENING, Feature.STATS,
+      Feature.MAXIMUM_SIZE, Feature.MAXIMUM_WEIGHT, Feature.EXPIRE_ACCESS,
+      Feature.EXPIRE_WRITE, Feature.REFRESH_WRITE};
+  private final List<LocalCacheRule> rules = List.of(new AddSubtype(), new AddConstructor(),
+      new AddKeyValueStrength(), new AddRemovalListener(), new AddStats(),
+      new AddExpirationTicker(), new AddMaximum(), new AddFastPath(), new AddDeques(),
+      new AddExpireAfterAccess(), new AddExpireAfterWrite(), new AddRefreshAfterWrite(),
+      new AddPacer(), new Finalize());
+  private final List<TypeSpec> factoryTypes;
+  private final Path directory;
 
-  TypeSpec.Builder factory;
-
-  public LocalCacheFactoryGenerator(Path directory) {
+  private LocalCacheFactoryGenerator(Path directory) {
     this.directory = requireNonNull(directory);
-    this.classNameToFeatures = new TreeMap<>();
+    this.factoryTypes = new ArrayList<>();
   }
 
-  void generate() throws IOException {
-    factory = TypeSpec.classBuilder("LocalCacheFactory")
-        .addModifiers(Modifier.FINAL)
-        .addAnnotation(AnnotationSpec.builder(SuppressWarnings.class)
-        .addMember("value", "{$S, $S, $S}", "unchecked", "unused", "PMD")
-        .build());
-    addClassJavaDoc();
+  private void generate() throws IOException {
     generateLocalCaches();
-
-    addFactoryMethods();
     writeJavaFile();
-  }
-
-  private void addFactoryMethods() {
-    factory.addMethod(newBoundedLocalCache());
-  }
-
-  private MethodSpec newBoundedLocalCache() {
-    Preconditions.checkState(!classNameToFeatures.isEmpty(), "Must generate all cache types first");
-    return MethodSpec.methodBuilder("newBoundedLocalCache")
-        .addTypeVariable(kTypeVar)
-        .addTypeVariable(vTypeVar)
-        .returns(BOUNDED_LOCAL_CACHE)
-        .addModifiers(Modifier.STATIC)
-        .addCode(LocalCacheSelectorCode.get(classNameToFeatures.keySet()))
-        .addParameter(BUILDER_PARAM)
-        .addParameter(CACHE_LOADER_PARAM)
-        .addParameter(boolean.class, "async")
-        .addJavadoc("Returns a cache optimized for this configuration.\n")
-        .build();
+    reformat();
   }
 
   private void writeJavaFile() throws IOException {
-    JavaFile.builder(getClass().getPackage().getName(), factory.build())
-        .addFileComment("Copyright $L Ben Manes. All Rights Reserved.", Year.now())
-        .indent("  ")
-        .build()
-        .writeTo(directory);
+    var header = Resources.toString(Resources.getResource("license.txt"), UTF_8).trim();
+    var timeZone = ZoneId.of("America/Los_Angeles");
+    for (TypeSpec typeSpec : factoryTypes) {
+      JavaFile.builder(getClass().getPackageName(), typeSpec)
+          .addFileComment(header, Year.now(timeZone))
+          .skipJavaLangImports(true)
+          .indent("  ")
+          .build()
+          .writeTo(directory);
+    }
+  }
+
+  @SuppressWarnings("SystemOut")
+  private void reformat() throws IOException {
+    if (Boolean.parseBoolean(System.getenv("JDK_EA"))) {
+      return; // may be incompatible for EA builds
+    }
+    try (Stream<Path> stream = Files.walk(directory)) {
+      ImmutableList<String> files = stream
+          .map(Path::toString)
+          .filter(path -> path.endsWith(".java"))
+          .collect(toImmutableList());
+      ToolProvider.findFirst("google-java-format").ifPresent(formatter -> {
+        int result = formatter.run(System.out, System.err,
+            Stream.concat(Stream.of("-i"), files.stream()).toArray(String[]::new));
+        checkState(result == 0, "Java formatting failed with %s exit code", result);
+      });
+    }
   }
 
   private void generateLocalCaches() {
-    fillClassNameToFeatures();
-    classNameToFeatures.entrySet().stream().forEach(entry -> {
-      String className = entry.getKey();
+    NavigableMap<String, ImmutableSet<Feature>> classNameToFeatures = getClassNameToFeatures();
+    classNameToFeatures.forEach((className, features) -> {
       String higherKey = classNameToFeatures.higherKey(className);
       boolean isLeaf = (higherKey == null) || !higherKey.startsWith(className);
-      addLocalCacheSpec(entry.getKey(), isLeaf, entry.getValue());
+      TypeSpec cacheSpec = makeLocalCacheSpec(className, isLeaf, features);
+      factoryTypes.add(cacheSpec);
     });
   }
 
-  private void fillClassNameToFeatures() {
+  private NavigableMap<String, ImmutableSet<Feature>> getClassNameToFeatures() {
+    var classNameToFeatures = new TreeMap<String, ImmutableSet<Feature>>();
     for (List<Object> combination : combinations()) {
-      Set<Feature> features = new LinkedHashSet<>();
-
-      features.add(((Boolean) combination.get(0)) ? Feature.STRONG_KEYS : Feature.WEAK_KEYS);
-      features.add(((Boolean) combination.get(1)) ? Feature.STRONG_VALUES : Feature.INFIRM_VALUES);
-      for (int i = 2; i < combination.size(); i++) {
-        if ((Boolean) combination.get(i)) {
-          features.add(featureByIndex[i]);
-        }
-      }
-      if (features.contains(Feature.MAXIMUM_WEIGHT)) {
-        features.remove(Feature.MAXIMUM_SIZE);
-      }
-      if (features.contains(Feature.FASTPATH) && !Feature.canUseFastPath(features)) {
-        continue;
-      }
-
+      ImmutableSet<Feature> features = getFeatures(combination);
       String className = encode(Feature.makeClassName(features));
-      classNameToFeatures.put(className, ImmutableSet.copyOf(features));
+      classNameToFeatures.put(className, features);
     }
+    return classNameToFeatures;
+  }
+
+  @SuppressWarnings("SetsImmutableEnumSetIterable")
+  private ImmutableSet<Feature> getFeatures(List<Object> combination) {
+    var features = new LinkedHashSet<Feature>();
+    features.add(((Boolean) combination.get(0)) ? Feature.STRONG_KEYS : Feature.WEAK_KEYS);
+    features.add(((Boolean) combination.get(1)) ? Feature.STRONG_VALUES : Feature.INFIRM_VALUES);
+    for (int i = 2; i < combination.size(); i++) {
+      if ((Boolean) combination.get(i)) {
+        features.add(featureByIndex[i]);
+      }
+    }
+    if (features.contains(Feature.MAXIMUM_WEIGHT)) {
+      features.remove(Feature.MAXIMUM_SIZE);
+    }
+    // In featureByIndex order for class naming
+    return ImmutableSet.copyOf(features);
   }
 
   private Set<List<Object>> combinations() {
-    Set<Boolean> options = ImmutableSet.of(true, false);
-    List<Set<Boolean>> sets = new ArrayList<>();
-    for (int i = 0; i < featureByIndex.length; i++) {
-      sets.add(options);
-    }
+    List<Set<Boolean>> sets = Collections.nCopies(featureByIndex.length, Set.of(true, false));
     return Sets.cartesianProduct(sets);
   }
 
-  private void addLocalCacheSpec(String className, boolean isFinal, Set<Feature> features) {
+  @SuppressWarnings("SetsImmutableEnumSetIterable")
+  private TypeSpec makeLocalCacheSpec(String className,
+      boolean isFinal, ImmutableSet<Feature> features) {
     TypeName superClass;
-    Set<Feature> parentFeatures;
-    Set<Feature> generateFeatures;
+    ImmutableSet<Feature> parentFeatures;
+    ImmutableSet<Feature> generateFeatures;
     if (features.size() == 2) {
       parentFeatures = ImmutableSet.of();
       generateFeatures = features;
       superClass = BOUNDED_LOCAL_CACHE;
     } else {
+      // Requires that parentFeatures is in featureByIndex order for super class naming
       parentFeatures = ImmutableSet.copyOf(Iterables.limit(features, features.size() - 1));
-      generateFeatures = ImmutableSet.of(Iterables.getLast(features));
+      generateFeatures = Sets.immutableEnumSet(features.asList().get(features.size() - 1));
       superClass = ParameterizedTypeName.get(ClassName.bestGuess(
           encode(Feature.makeClassName(parentFeatures))), kTypeVar, vTypeVar);
     }
 
-    LocalCacheContext context = new LocalCacheContext(
-        superClass, className, isFinal, parentFeatures, generateFeatures);
+    var context = new LocalCacheContext(superClass,
+        className, isFinal, parentFeatures, generateFeatures);
     for (LocalCacheRule rule : rules) {
-      rule.accept(context);
+      if (rule.applies(context)) {
+        rule.execute(context);
+      }
     }
-    factory.addType(context.cache.build());
-  }
-
-  private void addClassJavaDoc() {
-    factory.addJavadoc("<em>WARNING: GENERATED CODE</em>\n\n")
-        .addJavadoc("A factory for caches optimized for a particular configuration.\n")
-        .addJavadoc("\n@author ben.manes@gmail.com (Ben Manes)\n");
+    return context.build();
   }
 
   /** Returns an encoded form of the class name for compact use. */
@@ -207,19 +201,17 @@ public final class LocalCacheFactoryGenerator {
         .replaceFirst("WEAK_KEYS", "W")
         .replaceFirst("_STRONG_VALUES", "S")
         .replaceFirst("_INFIRM_VALUES", "I")
-        .replaceFirst("_LOADING", "Lo")
-        .replaceFirst("_LISTENING", "Li")
+        .replaceFirst("_LISTENING", "L")
         .replaceFirst("_STATS", "S")
         .replaceFirst("_MAXIMUM", "M")
         .replaceFirst("_WEIGHT", "W")
         .replaceFirst("_SIZE", "S")
         .replaceFirst("_EXPIRE_ACCESS", "A")
         .replaceFirst("_EXPIRE_WRITE", "W")
-        .replaceFirst("_REFRESH_WRITE", "R")
-        .replace("_FASTPATH", "F");
+        .replaceFirst("_REFRESH_WRITE", "R");
   }
 
   public static void main(String[] args) throws IOException {
-    new LocalCacheFactoryGenerator(Paths.get(args[0])).generate();
+    new LocalCacheFactoryGenerator(Path.of(args[0])).generate();
   }
 }
