@@ -15,23 +15,37 @@
  */
 package com.github.benmanes.caffeine.cache;
 
-import static com.github.benmanes.caffeine.cache.testing.CacheWriterVerifier.verifyWriter;
-import static com.github.benmanes.caffeine.cache.testing.HasRemovalNotifications.hasRemovalNotifications;
-import static com.github.benmanes.caffeine.cache.testing.HasStats.hasEvictionCount;
-import static com.github.benmanes.caffeine.testing.IsEmptyMap.emptyMap;
-import static java.util.Arrays.asList;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.contains;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.is;
-import static org.mockito.Mockito.verify;
+import static com.github.benmanes.caffeine.cache.RemovalCause.SIZE;
+import static com.github.benmanes.caffeine.cache.testing.AsyncCacheSubject.assertThat;
+import static com.github.benmanes.caffeine.cache.testing.CacheContext.intern;
+import static com.github.benmanes.caffeine.cache.testing.CacheContextSubject.assertThat;
+import static com.github.benmanes.caffeine.cache.testing.CacheSpec.Expiration.AFTER_ACCESS;
+import static com.github.benmanes.caffeine.cache.testing.CacheSpec.Expiration.AFTER_WRITE;
+import static com.github.benmanes.caffeine.cache.testing.CacheSpec.Expiration.VARIABLE;
+import static com.github.benmanes.caffeine.cache.testing.CacheSubject.assertThat;
+import static com.github.benmanes.caffeine.testing.Awaits.await;
+import static com.github.benmanes.caffeine.testing.ConcurrentTestHarness.executor;
+import static com.github.benmanes.caffeine.testing.FutureSubject.assertThat;
+import static com.github.benmanes.caffeine.testing.LoggingEvents.logEvents;
+import static com.github.benmanes.caffeine.testing.MapSubject.assertThat;
+import static com.google.common.collect.ImmutableList.toImmutableList;
+import static com.google.common.collect.ImmutableMap.toImmutableMap;
+import static com.google.common.truth.Truth.assertThat;
+import static java.util.function.Function.identity;
+import static org.junit.Assert.assertThrows;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
+import static org.slf4j.event.Level.WARN;
 
+import java.time.Duration;
+import java.util.ConcurrentModificationException;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionException;
+import java.util.concurrent.RejectedExecutionException;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 import org.testng.annotations.Listeners;
@@ -41,586 +55,1509 @@ import com.github.benmanes.caffeine.cache.Policy.Eviction;
 import com.github.benmanes.caffeine.cache.testing.CacheContext;
 import com.github.benmanes.caffeine.cache.testing.CacheProvider;
 import com.github.benmanes.caffeine.cache.testing.CacheSpec;
+import com.github.benmanes.caffeine.cache.testing.CacheSpec.CacheExpiry;
 import com.github.benmanes.caffeine.cache.testing.CacheSpec.CacheWeigher;
-import com.github.benmanes.caffeine.cache.testing.CacheSpec.Compute;
+import com.github.benmanes.caffeine.cache.testing.CacheSpec.Expire;
 import com.github.benmanes.caffeine.cache.testing.CacheSpec.Implementation;
 import com.github.benmanes.caffeine.cache.testing.CacheSpec.InitialCapacity;
 import com.github.benmanes.caffeine.cache.testing.CacheSpec.Listener;
-import com.github.benmanes.caffeine.cache.testing.CacheSpec.MaximumSize;
+import com.github.benmanes.caffeine.cache.testing.CacheSpec.Loader;
+import com.github.benmanes.caffeine.cache.testing.CacheSpec.Maximum;
 import com.github.benmanes.caffeine.cache.testing.CacheSpec.Population;
-import com.github.benmanes.caffeine.cache.testing.CacheSpec.ReferenceType;
-import com.github.benmanes.caffeine.cache.testing.CacheSpec.Writer;
 import com.github.benmanes.caffeine.cache.testing.CacheValidationListener;
+import com.github.benmanes.caffeine.cache.testing.CheckMaxLogLevel;
 import com.github.benmanes.caffeine.cache.testing.CheckNoStats;
-import com.github.benmanes.caffeine.cache.testing.CheckNoWriter;
-import com.github.benmanes.caffeine.cache.testing.RejectingCacheWriter.DeleteException;
 import com.github.benmanes.caffeine.cache.testing.RemovalListeners.RejectingRemovalListener;
-import com.github.benmanes.caffeine.testing.Awaits;
+import com.github.benmanes.caffeine.testing.Int;
+import com.google.common.collect.HashBiMap;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Iterables;
-import com.google.common.collect.MapDifference;
 import com.google.common.collect.Maps;
+import com.google.common.collect.Range;
 
 /**
  * The test cases for caches with a page replacement algorithm.
  *
  * @author ben.manes@gmail.com (Ben Manes)
  */
+@CheckMaxLogLevel(WARN)
 @Listeners(CacheValidationListener.class)
 @Test(dataProviderClass = CacheProvider.class)
 public final class EvictionTest {
 
-  /* ---------------- RemovalListener -------------- */
+  /* --------------- RemovalListener --------------- */
 
   @Test(dataProvider = "caches")
-  @CacheSpec(population = Population.FULL, maximumSize = MaximumSize.FULL,
-      weigher = {CacheWeigher.DEFAULT, CacheWeigher.TEN}, removalListener = Listener.REJECTING)
-  public void removalListener_fails(Cache<Integer, Integer> cache, CacheContext context) {
-    RejectingRemovalListener<Integer, Integer> removalListener =
-        (RejectingRemovalListener<Integer, Integer>) context.removalListener();
+  @CacheSpec(population = Population.FULL, maximumSize = Maximum.FULL,
+      weigher = {CacheWeigher.DISABLED, CacheWeigher.TEN}, removalListener = Listener.REJECTING)
+  public void removalListener_fails(Cache<Int, Int> cache, CacheContext context) {
+    var removalListener = (RejectingRemovalListener<Int, Int>) context.removalListener();
     // Guava-style caches reject before the max size is reached & are unpredictable
     removalListener.rejected = 0;
     long size = cache.estimatedSize();
-    for (Integer key : context.absentKeys()) {
-      cache.put(key, -key);
+    for (Int key : context.absentKeys()) {
+      cache.put(key, key);
       if (cache.estimatedSize() != ++size) {
         break;
       }
     }
-    assertThat(removalListener.rejected, is(1));
+    assertThat(removalListener.rejected).isEqualTo(1);
   }
 
-  /* ---------------- Evict (size/weight) -------------- */
+  /* --------------- Evict (size/weight) --------------- */
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
-      maximumSize = { MaximumSize.ZERO, MaximumSize.ONE, MaximumSize.FULL },
-      weigher = {CacheWeigher.DEFAULT, CacheWeigher.TEN})
-  public void evict(Cache<Integer, Integer> cache, CacheContext context,
-      Eviction<Integer, Integer> eviction) {
+  @CacheSpec(population = Population.FULL, maximumSize = {Maximum.ZERO, Maximum.ONE, Maximum.FULL},
+      weigher = {CacheWeigher.DISABLED, CacheWeigher.TEN})
+  public void evict(Cache<Int, Int> cache, CacheContext context) {
     cache.putAll(context.absent());
-    if (eviction.isWeighted()) {
-      assertThat(eviction.weightedSize().getAsLong(), is(context.maximumWeight()));
+    if (context.isWeighted()) {
+      assertThat(context).hasWeightedSize(context.maximumWeight());
     } else {
-      assertThat(cache.estimatedSize(), is(context.maximumSize()));
+      assertThat(cache).hasSize(context.maximumSize());
     }
-    int count = context.absentKeys().size();
-    assertThat(context, hasEvictionCount(count));
-    assertThat(cache, hasRemovalNotifications(context, count, RemovalCause.SIZE));
 
-    verifyWriter(context, (verifier, writer) -> {
-      Map<Integer, Integer> all = new HashMap<>(context.original());
-      all.putAll(context.absent());
-      MapDifference<Integer, Integer> diff = Maps.difference(all, cache.asMap());
-      verifier.deletedAll(diff.entriesOnlyOnLeft(), RemovalCause.SIZE);
-    });
+    var evicted = new HashMap<Int, Int>();
+    evicted.putAll(Maps.difference(context.original(), cache.asMap()).entriesOnlyOnLeft());
+    evicted.putAll(Maps.difference(context.absent(), cache.asMap()).entriesOnlyOnLeft());
+    assertThat(context).stats().evictions(evicted.size());
+    assertThat(evicted).hasSize(context.absentKeys().size());
+    assertThat(context).notifications().withCause(SIZE)
+        .contains(evicted).exclusively();
   }
 
   @Test(dataProvider = "caches")
   @CacheSpec(implementation = Implementation.Caffeine, population = Population.EMPTY,
-      initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = MaximumSize.TEN,
-      weigher = CacheWeigher.COLLECTION, keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
-  public void evict_weighted(Cache<Integer, List<Integer>> cache,
-      Eviction<?, ?> eviction, CacheContext context) {
-    @SuppressWarnings({"unchecked", "rawtypes"})
-    CacheWriter<Integer, List<Integer>> writer = (CacheWriter) context.cacheWriter();
+      maximumSize = Maximum.TEN, weigher = CacheWeigher.COLLECTION,
+      initialCapacity = InitialCapacity.EXCESSIVE)
+  public void evict_weighted(Cache<Int, List<Int>> cache, CacheContext context) {
+    // Enforce full initialization of internal structures
+    for (int i = 0; i < context.maximumSize(); i++) {
+      cache.put(Int.valueOf(i), List.of());
+    }
+    cache.invalidateAll();
 
-    List<Integer> value1 = asList(8, 9, 10);
-    List<Integer> value2 = asList(3, 4, 5, 6, 7);
-    List<Integer> value3 = asList(1, 2);
-    List<Integer> value4 = asList(11);
-    List<Integer> value5 = asList(12, 13, 14, 15, 16, 17, 18, 19, 20);
+    var value1 = intern(Int.listOf(8, 9, 10));
+    var value2 = intern(Int.listOf(3, 4, 5, 6, 7));
+    var value3 = intern(Int.listOf(1, 2));
+    var value4 = intern(Int.listOf(11));
+    var value5 = intern(Int.listOf(12, 13, 14, 15, 16, 17, 18, 19, 20));
 
     // Never evicted
-    cache.put(0, asList());
+    cache.put(Int.valueOf(0), List.of());
 
-    cache.put(1, value1);
-    cache.put(2, value2);
-    cache.put(3, value3);
-    assertThat(cache.estimatedSize(), is(4L));
-    assertThat(eviction.weightedSize().getAsLong(), is(10L));
+    cache.put(Int.valueOf(1), value1);
+    cache.put(Int.valueOf(2), value2);
+    cache.put(Int.valueOf(3), value3);
+    assertThat(cache).hasSize(4);
+    assertThat(context).hasWeightedSize(10);
 
-    // [0 | 1, 2, 3] -> [0, 4 | 2, 3]
-    cache.put(4, value4);
-    assertThat(cache.asMap().containsKey(1), is(false));
-    assertThat(cache.estimatedSize(), is(4L));
-    assertThat(eviction.weightedSize().getAsLong(), is(8L));
-    verifyWriter(context, (verifier, ignored) -> {
-      verify(writer).delete(1, value1, RemovalCause.SIZE);
-      verifier.deletions(1, RemovalCause.SIZE);
-    });
+    // [0(0) | 1(3), 2(5), 3(2)] -> [4(1), 0(0) | 3(2), 2(5), 1(3)] -> [0(0) | 3(2), 2(5), 1(3)]
+    // #1: candidate=0 vs victim=1 -> skip candidate due to zero weight
+    // #2: candidate=4 vs victim=1 -> f(4) == f(1) -> evict candidate
+    cache.put(Int.valueOf(4), value4);
+    assertThat(cache).hasSize(4);
+    assertThat(context).hasWeightedSize(10);
+    assertThat(cache).doesNotContainKey(Int.valueOf(4));
 
-    // [0, 4 | 2, 3] remains (5 exceeds window and has the same usage history, so evicted)
-    cache.put(5, value5);
-    assertThat(cache.estimatedSize(), is(4L));
-    assertThat(eviction.weightedSize().getAsLong(), is(8L));
-    verifyWriter(context, (verifier, ignored) -> {
-      verify(writer).delete(5, value5, RemovalCause.SIZE);
-      verifier.deletions(2);
-    });
+    // [0(0) | 3(2), 2(5), 1(3)] -> [4(1), 0(0) | 3(2), 2(5), 1(3)] -> [4(1), 0(0) | 3(2), 2(5)]
+    // #1: candidate=0 vs victim=1 => skip candidate due to zero weight
+    // #2: candidate=4 vs victim=1 -> f(4) > f(1) -> evict victim
+    cache.put(Int.valueOf(4), value4);
+    assertThat(cache).hasSize(4);
+    assertThat(context).hasWeightedSize(8);
+    assertThat(cache).doesNotContainKey(Int.valueOf(1));
+
+    // [4(1), 0(0) | 3(2), 2(5)] -> [4(1), 0(0), 5(9) | 3(2), 2(5)] -> [4(1), 0(0) | 3(2), 2(5)]
+    // 5 exceeds window (9 >> 1), so it is inserted at the LRU position for immediate promotion
+    // #1: candidate=5 vs victim=2 => f(5) == f(2) -> evict candidate
+    cache.put(Int.valueOf(5), value5);
+    assertThat(cache).hasSize(4);
+    assertThat(context).hasWeightedSize(8);
+    assertThat(context).stats().evictions(3).evictionWeight(13);
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.TEN,
-      weigher = CacheWeigher.VALUE, population = Population.EMPTY,
-      keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
-  public void evict_weighted_async(AsyncLoadingCache<Integer, Integer> cache,
+  @CacheSpec(population = Population.EMPTY, initialCapacity = InitialCapacity.EXCESSIVE,
+      maximumSize = Maximum.TEN, weigher = CacheWeigher.COLLECTION)
+  public void evict_weighted_reorder(Cache<Int, List<Int>> cache,
       CacheContext context, Eviction<?, ?> eviction) {
-    AtomicBoolean ready = new AtomicBoolean();
-    AtomicBoolean done = new AtomicBoolean();
-    CompletableFuture<Integer> valueFuture = CompletableFuture.supplyAsync(() -> {
-      Awaits.await().untilTrue(ready);
-      return 6;
-    });
-    valueFuture.whenComplete((r, e) -> done.set(true));
-
-    cache.put(5, CompletableFuture.completedFuture(5));
-    cache.put(4, CompletableFuture.completedFuture(4));
-    cache.put(6, valueFuture);
-    assertThat(eviction.weightedSize().getAsLong(), is(9L));
-    assertThat(cache.synchronous().estimatedSize(), is(3L));
-
-    ready.set(true);
-    Awaits.await().untilTrue(done);
-    assertThat(eviction.weightedSize().getAsLong(), is(10L));
-    assertThat(cache.synchronous().estimatedSize(), is(2L));
-    assertThat(context, hasRemovalNotifications(context, 1, RemovalCause.SIZE));
-    verifyWriter(context, (verifier, writer) -> verifier.deletions(1, RemovalCause.SIZE));
+    eviction.setMaximum(3);
+    for (int i = 1; i <= 3; i++) {
+      cache.put(Int.valueOf(i), intern(Int.listOf(1)));
+    }
+    cache.asMap().computeIfPresent(Int.valueOf(1), (k, v) -> intern(Int.listOf(1, 2)));
+    assertThat(cache).containsEntry(Int.valueOf(1), intern(Int.listOf(1, 2)));
+    assertThat(context).hasWeightedSize(3);
+    assertThat(cache).hasSize(2);
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.ZERO,
-      weigher = CacheWeigher.COLLECTION, population = Population.EMPTY,
-      keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
-  public void evict_zero_async(AsyncLoadingCache<Integer, List<Integer>> cache,
-      CacheContext context, Eviction<?, ?> eviction) {
-    AtomicBoolean ready = new AtomicBoolean();
-    AtomicBoolean done = new AtomicBoolean();
-    CompletableFuture<List<Integer>> valueFuture = CompletableFuture.supplyAsync(() -> {
-      Awaits.await().untilTrue(ready);
-      return ImmutableList.of(1, 2, 3, 4, 5);
+  @CacheSpec(population = Population.EMPTY, removalListener = Listener.CONSUMING,
+      maximumSize = Maximum.TEN, weigher = CacheWeigher.VALUE)
+  public void evict_weighted_entryTooBig(Cache<Int, Int> cache, CacheContext context) {
+    cache.put(Int.valueOf(9), Int.valueOf(9));
+    cache.put(Int.valueOf(1), Int.valueOf(1));
+    assertThat(cache).hasSize(2);
+    cache.policy().eviction().ifPresent(eviction -> {
+      assertThat(context).hasWeightedSize(10);
     });
-    valueFuture.whenComplete((r, e) -> done.set(true));
 
-    cache.put(context.absentKey(), valueFuture);
-    assertThat(eviction.weightedSize().getAsLong(), is(0L));
-    assertThat(cache.synchronous().estimatedSize(), is(1L));
-
-    ready.set(true);
-    Awaits.await().untilTrue(done);
-    assertThat(eviction.weightedSize().getAsLong(), is(0L));
-    assertThat(cache.synchronous().estimatedSize(), is(0L));
-
-    assertThat(context, hasRemovalNotifications(context, 1, RemovalCause.SIZE));
-    verifyWriter(context, (verifier, writer) -> verifier.deletions(1, RemovalCause.SIZE));
-  }
-
-  @CheckNoStats
-  @Test(dataProvider = "caches", expectedExceptions = DeleteException.class)
-  @CacheSpec(implementation = Implementation.Caffeine, keys = ReferenceType.STRONG,
-      population = Population.FULL, maximumSize = MaximumSize.FULL,
-      weigher = {CacheWeigher.DEFAULT, CacheWeigher.TEN},
-      compute = Compute.SYNC, writer = Writer.EXCEPTIONAL, removalListener = Listener.REJECTING)
-  public void evict_writerFails(Cache<Integer, Integer> cache, CacheContext context) {
-    try {
-      cache.policy().eviction().ifPresent(policy -> policy.setMaximum(0));
-    } finally {
-      context.disableRejectingCacheWriter();
-      assertThat(cache.asMap(), equalTo(context.original()));
+    cache.put(Int.valueOf(20), Int.valueOf(20));
+    assertThat(cache).hasSize(2);
+    cache.policy().eviction().ifPresent(eviction -> {
+      assertThat(context).hasWeightedSize(10);
+    });
+    assertThat(context).notifications().withCause(SIZE)
+        .contains(Int.valueOf(20), Int.valueOf(20)).exclusively();
+    if (context.isCaffeine()) {
+      assertThat(context).stats().evictionWeight(20);
     }
   }
 
-  /* ---------------- Weighted -------------- */
-
-  @CheckNoWriter
-  @CacheSpec(maximumSize = MaximumSize.FULL,
-      weigher = CacheWeigher.NEGATIVE, population = Population.EMPTY)
-  @Test(dataProvider = "caches",
-      expectedExceptions = { IllegalArgumentException.class, IllegalStateException.class })
-  public void put_negativeWeight(Cache<Integer, Integer> cache, CacheContext context) {
-    cache.put(context.absentKey(), context.absentValue());
-  }
-
-  @CacheSpec(maximumSize = MaximumSize.FULL,
-      weigher = CacheWeigher.ZERO, population = Population.EMPTY)
   @Test(dataProvider = "caches")
-  public void put_zeroWeight(Cache<Integer, Integer> cache, CacheContext context) {
-    cache.put(context.absentKey(), context.absentValue());
-    verifyWriter(context, (verifier, writer) -> {
-      verifier.wrote(context.absentKey(), context.absentValue());
-    });
-  }
+  @CacheSpec(population = Population.EMPTY, maximumSize = Maximum.TEN,
+      weigher = CacheWeigher.VALUE, removalListener = Listener.CONSUMING)
+  public void evict_weighted_async(AsyncCache<Int, Int> cache, CacheContext context) {
+    var ready = new AtomicBoolean();
+    var done = new AtomicBoolean();
+    var valueFuture = CompletableFuture.supplyAsync(() -> {
+      await().untilTrue(ready);
+      return Int.valueOf(6);
+    }, executor);
+    var completed = valueFuture.whenComplete((r, e) -> done.set(true));
 
-  @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      weigher = CacheWeigher.COLLECTION, population = Population.EMPTY,
-      keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
-  public void put(Cache<String, List<Integer>> cache, Eviction<?, ?> eviction) {
-    cache.put("a", asList(1, 2, 3));
-    assertThat(cache.estimatedSize(), is(1L));
-    assertThat(eviction.weightedSize().getAsLong(), is(3L));
-  }
-
-  @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      weigher = CacheWeigher.COLLECTION, population = Population.EMPTY,
-      keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
-  public void put_sameWeight(Cache<String, List<Integer>> cache, Eviction<?, ?> eviction) {
-    cache.putAll(ImmutableMap.of("a", asList(1, 2, 3), "b", asList(1)));
-
-    cache.put("a", asList(-1, -2, -3));
-    assertThat(cache.estimatedSize(), is(2L));
-    assertThat(eviction.weightedSize().getAsLong(), is(4L));
-  }
-
-  @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      weigher = CacheWeigher.COLLECTION, population = Population.EMPTY,
-      keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
-  public void put_changeWeight(Cache<String, List<Integer>> cache,
-      Eviction<?, ?> eviction, CacheContext context) {
-    @SuppressWarnings({"unchecked", "rawtypes"})
-    CacheWriter<String, List<Integer>> writer = (CacheWriter) context.cacheWriter();
-
-    cache.putAll(ImmutableMap.of("a", asList(1, 2, 3), "b", asList(1)));
-
-    cache.put("a", asList(-1, -2, -3, -4));
-    assertThat(cache.estimatedSize(), is(2L));
-    assertThat(eviction.weightedSize().getAsLong(), is(5L));
-
-    verifyWriter(context, (verifier, ignored) -> {
-      verify(writer).write("a", asList(1, 2, 3));
-      verify(writer).write("b", asList(1));
-      verify(writer).write("a", asList(-1, -2, -3, -4));
-    });
-  }
-
-  @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      weigher = CacheWeigher.COLLECTION, population = Population.EMPTY,
-      keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
-  public void put_asyncWeight(AsyncLoadingCache<Integer, List<Integer>> cache,
-      CacheContext context, Eviction<?, ?> eviction) {
-    AtomicBoolean ready = new AtomicBoolean();
-    AtomicBoolean done = new AtomicBoolean();
-    CompletableFuture<List<Integer>> valueFuture = CompletableFuture.supplyAsync(() -> {
-      Awaits.await().untilTrue(ready);
-      return ImmutableList.of(1, 2, 3, 4, 5);
-    });
-    valueFuture.whenComplete((r, e) -> done.set(true));
-
-    cache.put(context.absentKey(), valueFuture);
-    assertThat(eviction.weightedSize().getAsLong(), is(0L));
-    assertThat(cache.synchronous().estimatedSize(), is(1L));
+    cache.put(Int.valueOf(5), Int.futureOf(5));
+    cache.put(Int.valueOf(4), Int.futureOf(4));
+    cache.put(Int.valueOf(6), valueFuture);
+    assertThat(context).hasWeightedSize(9);
+    assertThat(cache).hasSize(3);
 
     ready.set(true);
-    Awaits.await().untilTrue(done);
-    assertThat(eviction.weightedSize().getAsLong(), is(5L));
-    assertThat(cache.synchronous().estimatedSize(), is(1L));
+    await().untilTrue(done);
+    await().until(completed::isDone);
+    await().untilAsserted(() -> assertThat(cache).hasSize(2));
+    await().untilAsserted(() -> assertThat(context)
+        .hasWeightedSizeLessThan(context.maximumWeight() + 1));
+
+    int expected = 15 - cache.synchronous().asMap().values().stream().mapToInt(Int::intValue).sum();
+    assertThat(context).stats().evictionWeight(expected);
+    assertThat(context).notifications().withCause(SIZE)
+        .contains(Int.valueOf(expected), Int.valueOf(expected)).exclusively();
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      weigher = CacheWeigher.COLLECTION, population = Population.EMPTY,
-      keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
-  public void replace_sameWeight(Cache<String, List<Integer>> cache, Eviction<?, ?> eviction) {
-    cache.putAll(ImmutableMap.of("a", asList(1, 2, 3), "b", asList(1)));
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.ZERO, weigher = CacheWeigher.COLLECTION)
+  public void evict_zero_async(AsyncCache<Int, List<Int>> cache, CacheContext context) {
+    var ready = new AtomicBoolean();
+    var done = new AtomicBoolean();
+    var valueFuture = CompletableFuture.supplyAsync(() -> {
+      await().untilTrue(ready);
+      return Int.listOf(1, 2, 3, 4, 5);
+    }, executor);
+    var completed = valueFuture.whenComplete((r, e) -> done.set(true));
 
-    cache.asMap().replace("a", asList(-1, -2, -3));
-    assertThat(cache.estimatedSize(), is(2L));
-    assertThat(eviction.weightedSize().getAsLong(), is(4L));
+    cache.put(context.absentKey(), valueFuture);
+    assertThat(context).hasWeightedSize(0);
+    assertThat(cache).hasSize(1);
+
+    ready.set(true);
+    await().untilTrue(done);
+    await().until(completed::isDone);
+    await().untilAsserted(() -> assertThat(cache).isEmpty());
+    assertThat(context).notifications().withCause(SIZE)
+        .contains(Map.entry(context.absentKey(), Int.listOf(1, 2, 3, 4, 5)))
+        .exclusively();
+  }
+
+  @CheckNoStats
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL, maximumSize = Maximum.FULL,
+      weigher = CacheWeigher.DISABLED, evictionListener = Listener.REJECTING)
+  public void evict_evictionListener_failure(Cache<Int, Int> cache, CacheContext context) {
+    cache.policy().eviction().ifPresent(policy -> policy.setMaximum(0));
+    assertThat(context).evictionNotifications().hasSize(context.original().size());
+    assertThat(logEvents()
+        .withMessage("Exception thrown by eviction listener")
+        .withThrowable(RejectedExecutionException.class)
+        .withLevel(WARN)
+        .exclusively())
+        .hasSize(context.original().size());
+  }
+
+  /* --------------- Weighted --------------- */
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void getAll_weigherFails(Cache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    assertThrows(IllegalStateException.class, () ->
+        cache.getAll(context.absentKeys(), keys -> Maps.toMap(keys, Int::negate)));
+    assertThat(cache).containsExactlyEntriesIn(context.original());
+    if (context.isCaffeine()) {
+      assertThat(logEvents()
+          .withMessage("Exception thrown during asynchronous load")
+          .withThrowable(IllegalStateException.class)
+          .withLevel(WARN)
+          .exclusively())
+          .hasSize(context.isAsync() ? context.absentKeys().size() : 0);
+    }
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      weigher = CacheWeigher.COLLECTION, population = Population.EMPTY,
-      keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
-  public void replace_changeWeight(Cache<String, List<Integer>> cache, Eviction<?, ?> eviction) {
-    cache.putAll(ImmutableMap.of("a", asList(1, 2, 3), "b", asList(1)));
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void getAll_weigherFails_async(AsyncCache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    var future = new CompletableFuture<Map<Int, Int>>();
+    var result = cache.getAll(context.absentKeys(), (keys, executor) -> future);
+    future.complete(Maps.toMap(context.absentKeys(), Int::negate));
 
-    cache.asMap().replace("a", asList(-1, -2, -3, -4));
-    assertThat(cache.estimatedSize(), is(2L));
-    assertThat(eviction.weightedSize().getAsLong(), is(5L));
+    assertThat(context).stats().failures(1);
+    assertThat(result).failsWith(CompletionException.class)
+        .hasCauseThat().isInstanceOf(IllegalStateException.class);
+    assertThat(cache).containsExactlyEntriesIn(context.original());
+    assertThat(logEvents()
+        .withMessage("Exception thrown during asynchronous load")
+        .withThrowable(IllegalStateException.class)
+        .withLevel(WARN)
+        .exclusively())
+        .hasSize(context.absentKeys().size());
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      weigher = CacheWeigher.COLLECTION, population = Population.EMPTY,
-      keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void getAll_weigherFails_newEntries(Cache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    assertThrows(IllegalStateException.class, () ->
+        cache.getAll(context.absentKeys(), keys -> HashBiMap.create(context.original()).inverse()));
+    assertThat(cache).containsExactlyEntriesIn(context.original());
+    if (context.isCaffeine()) {
+      assertThat(logEvents()
+          .withMessage("Exception thrown during asynchronous load")
+          .withThrowable(IllegalStateException.class)
+          .withLevel(WARN)
+          .exclusively())
+          .hasSize(context.isAsync() ? context.original().size() : 0);
+    }
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void getAll_weigherFails_newEntries_async(
+      AsyncCache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    var future = new CompletableFuture<Map<Int, Int>>();
+    var result = cache.getAll(context.absentKeys(), (keys, executor) -> future);
+    future.complete(HashBiMap.create(context.original()).inverse());
+
+    assertThat(context).stats().failures(1);
+    assertThat(result).failsWith(CompletionException.class)
+        .hasCauseThat().isInstanceOf(IllegalStateException.class);
+    assertThat(cache).containsExactlyEntriesIn(context.original());
+    assertThat(logEvents()
+        .withMessage("Exception thrown during asynchronous load")
+        .withThrowable(IllegalStateException.class)
+        .withLevel(WARN)
+        .exclusively())
+        .hasSize(context.original().size());
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.NEGATIVE)
+  public void put_negativeWeight(Cache<Int, Int> cache, CacheContext context) {
+    assertThrows(IllegalArgumentException.class, () ->
+        cache.put(context.absentKey(), context.absentValue()));
+    assertThat(cache).doesNotContainKey(context.absentKey());
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void put_weigherFails_insert(Cache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    assertThrows(IllegalStateException.class, () ->
+        cache.put(context.absentKey(), context.absentValue()));
+    assertThat(cache).doesNotContainKey(context.absentKey());
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void put_weigherFails_insert_async(AsyncCache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    var future = new CompletableFuture<Int>();
+    cache.put(context.absentKey(), future);
+    future.complete(context.absentValue());
+    assertThat(context).stats().failures(1);
+    assertThat(cache).doesNotContainKey(context.absentKey());
+    assertThat(logEvents()
+        .withMessage("Exception thrown during asynchronous load")
+        .withThrowable(IllegalStateException.class)
+        .withLevel(WARN)
+        .exclusively())
+        .hasSize(1);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void put_weigherFails_update(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    assertThrows(IllegalStateException.class, () ->
+        cache.put(context.firstKey(), context.absentValue()));
+    assertThat(cache).containsExactlyEntriesIn(context.original());
+    assertThat(eviction.weightOf(context.firstKey())).hasValue(1);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void put_weigherFails_update_async(AsyncCache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    var future = new CompletableFuture<Int>();
+    cache.put(context.absentKey(), future);
+    future.complete(context.absentValue());
+    assertThat(context).stats().failures(1);
+    assertThat(cache).doesNotContainKey(context.absentKey());
+    assertThat(logEvents()
+        .withMessage("Exception thrown during asynchronous load")
+        .withThrowable(IllegalStateException.class)
+        .withLevel(WARN)
+        .exclusively())
+        .hasSize(1);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(maximumSize = Maximum.FULL,
+      weigher = CacheWeigher.ZERO, population = Population.EMPTY)
+  public void put_zeroWeight(Cache<Int, Int> cache, CacheContext context) {
+    cache.put(context.absentKey(), context.absentValue());
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.COLLECTION)
+  public void put(Cache<String, List<Int>> cache, CacheContext context) {
+    cache.put("a", intern(Int.listOf(1, 2, 3)));
+    assertThat(context).hasWeightedSize(3);
+    assertThat(cache).hasSize(1);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.COLLECTION)
+  public void put_sameWeight(Cache<String, List<Int>> cache, CacheContext context) {
+    cache.putAll(intern(Map.of("a", Int.listOf(1, 2, 3), "b", Int.listOf(1))));
+    cache.put("a", intern(Int.listOf(-1, -2, -3)));
+    assertThat(context).hasWeightedSize(4);
+    assertThat(cache).hasSize(2);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.COLLECTION)
+  public void put_changeWeight(Cache<String, List<Int>> cache, CacheContext context) {
+    cache.putAll(intern(Map.of("a", Int.listOf(1, 2, 3), "b", Int.listOf(1))));
+    cache.put("a", intern(Int.listOf(-1, -2, -3, -4)));
+    assertThat(context).hasWeightedSize(5);
+    assertThat(cache).hasSize(2);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.COLLECTION)
+  public void put_asyncWeight(AsyncCache<Int, List<Int>> cache, CacheContext context) {
+    var ready = new AtomicBoolean();
+    var done = new AtomicBoolean();
+    var valueFuture = CompletableFuture.supplyAsync(() -> {
+      await().untilTrue(ready);
+      return Int.listOf(1, 2, 3, 4, 5);
+    }, executor);
+    var completed = valueFuture.whenComplete((r, e) -> done.set(true));
+
+    cache.put(context.absentKey(), valueFuture);
+    assertThat(context).hasWeightedSize(0);
+    assertThat(cache).hasSize(1);
+
+    ready.set(true);
+    await().untilTrue(done);
+    await().until(completed::isDone);
+    await().untilAsserted(() -> assertThat(cache).hasSize(1));
+    await().untilAsserted(() -> assertThat(context).hasWeightedSize(5));
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY, implementation = Implementation.Guava,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void replace_weigherFails_absent(Cache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    Runnable replace = () -> cache.asMap().replace(context.absentKey(), context.absentValue());
+    if (context.isAsync() || context.isGuava()) {
+      replace.run();
+    } else {
+      assertThrows(IllegalStateException.class, replace::run);
+    }
+    assertThat(cache).doesNotContainKey(context.absentKey());
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void replace_weigherFails_present(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    assertThrows(IllegalStateException.class, () ->
+        cache.asMap().replace(context.firstKey(), context.absentValue()));
+    assertThat(cache).containsExactlyEntriesIn(context.original());
+    assertThat(eviction.weightOf(context.firstKey())).hasValue(1);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void replace_weigherFails_present_async(AsyncCache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    var future = new CompletableFuture<Int>();
+    cache.asMap().replace(context.firstKey(),  future);
+    future.complete(context.absentValue());
+    assertThat(context).stats().failures(1);
+    assertThat(cache).doesNotContainKey(context.absentKey());
+    assertThat(logEvents()
+        .withMessage("Exception thrown during asynchronous load")
+        .withThrowable(IllegalStateException.class)
+        .withLevel(WARN)
+        .exclusively())
+        .hasSize(1);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.COLLECTION)
+  public void replace_sameWeight(Cache<String, List<Int>> cache, CacheContext context) {
+    cache.putAll(intern(Map.of("a", Int.listOf(1, 2, 3), "b", Int.listOf(1))));
+    cache.asMap().replace("a", intern(Int.listOf(-1, -2, -3)));
+    assertThat(context).hasWeightedSize(4);
+    assertThat(cache).hasSize(2);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.COLLECTION)
+  public void replace_changeWeight(Cache<String, List<Int>> cache, CacheContext context) {
+    cache.putAll(intern(Map.of("a", Int.listOf(1, 2, 3), "b", Int.listOf(1))));
+    cache.asMap().replace("a", intern(Int.listOf(-1, -2, -3, -4)));
+    assertThat(context).hasWeightedSize(5);
+    assertThat(cache).hasSize(2);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.COLLECTION)
   public void replaceConditionally_sameWeight(
-      Cache<String, List<Integer>> cache, Eviction<?, ?> eviction) {
-    cache.putAll(ImmutableMap.of("a", asList(1, 2, 3), "b", asList(1)));
-
-    assertThat(cache.asMap().replace("a", asList(1, 2, 3), asList(4, 5, 6)), is(true));
-    assertThat(cache.estimatedSize(), is(2L));
-    assertThat(eviction.weightedSize().getAsLong(), is(4L));
+      Cache<String, List<Int>> cache, CacheContext context) {
+    var oldValue = intern(Int.listOf(1, 2, 3));
+    var newValue = intern(Int.listOf(4, 5, 6));
+    cache.putAll(intern(Map.of("a", oldValue, "b", Int.listOf(1))));
+    assertThat(cache.asMap().replace("a", oldValue, newValue)).isTrue();
+    assertThat(context).hasWeightedSize(4);
+    assertThat(cache).hasSize(2);
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      weigher = CacheWeigher.COLLECTION, population = Population.EMPTY,
-      keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.COLLECTION)
   public void replaceConditionally_changeWeight(
-      Cache<String, List<Integer>> cache, Eviction<?, ?> eviction) {
-    cache.putAll(ImmutableMap.of("a", asList(1, 2, 3), "b", asList(1)));
-
-    cache.asMap().replace("a", asList(1, 2, 3), asList(-1, -2, -3, -4));
-    assertThat(cache.estimatedSize(), is(2L));
-    assertThat(eviction.weightedSize().getAsLong(), is(5L));
+      Cache<String, List<Int>> cache, CacheContext context) {
+    List<Int> oldValue = intern(Int.listOf(1, 2, 3));
+    List<Int> newValue = intern(Int.listOf(-1, -2, -3, -4));
+    cache.putAll(intern(Map.of("a", oldValue, "b", Int.listOf(1))));
+    cache.asMap().replace("a", oldValue, newValue);
+    assertThat(context).hasWeightedSize(5);
+    assertThat(cache).hasSize(2);
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      weigher = CacheWeigher.COLLECTION, population = Population.EMPTY,
-      keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
-  public void replaceConditionally_fails(
-      Cache<String, List<Integer>> cache, Eviction<?, ?> eviction) {
-    cache.putAll(ImmutableMap.of("a", asList(1, 2, 3), "b", asList(1)));
-
-    assertThat(cache.asMap().replace("a", asList(1), asList(4, 5)), is(false));
-    assertThat(cache.estimatedSize(), is(2L));
-    assertThat(eviction.weightedSize().getAsLong(), is(4L));
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void replaceConditionally_weigherFails_absent(
+      Cache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    Runnable replace = () -> cache.asMap().replace(
+        context.absentKey(), context.absentValue(), context.absentValue());
+    if (context.isAsync() || context.isGuava()) {
+      replace.run();
+    } else {
+      assertThrows(IllegalStateException.class, replace::run);
+    }
+    assertThat(cache).doesNotContainKey(context.absentKey());
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      weigher = CacheWeigher.COLLECTION, population = Population.EMPTY,
-      keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
-  public void remove(Cache<String, List<Integer>> cache, Eviction<?, ?> eviction) {
-    cache.putAll(ImmutableMap.of("a", asList(1, 2, 3), "b", asList(1)));
-
-    assertThat(cache.asMap().remove("a"), is(asList(1, 2, 3)));
-    assertThat(cache.estimatedSize(), is(1L));
-    assertThat(eviction.weightedSize().getAsLong(), is(1L));
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void replaceConditionally_weigherFails_presentKey(
+      Cache<Int, Int> cache, CacheContext context, Eviction<Int, Int> eviction) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    assertThrows(IllegalStateException.class, () ->
+      cache.asMap().replace(context.firstKey(),
+          context.original().get(context.firstKey()), context.absentValue()));
+    assertThat(cache).containsExactlyEntriesIn(context.original());
+    assertThat(eviction.weightOf(context.firstKey())).hasValue(1);
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      weigher = CacheWeigher.COLLECTION, population = Population.EMPTY,
-      keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
-  public void removeConditionally(Cache<String, List<Integer>> cache, Eviction<?, ?> eviction) {
-    cache.putAll(ImmutableMap.of("a", asList(1, 2, 3), "b", asList(1)));
-
-    assertThat(cache.asMap().remove("a", asList(1, 2, 3)), is(true));
-    assertThat(cache.estimatedSize(), is(1L));
-    assertThat(eviction.weightedSize().getAsLong(), is(1L));
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void replaceConditionally_weigherFails_presentKey_async(
+      AsyncCache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    var future = new CompletableFuture<Int>();
+    cache.asMap().replace(context.firstKey(), cache.getIfPresent(context.firstKey()), future);
+    future.complete(context.absentValue());
+    assertThat(context).stats().failures(1);
+    assertThat(cache).doesNotContainKey(context.absentKey());
+    assertThat(logEvents()
+        .withMessage("Exception thrown during asynchronous load")
+        .withThrowable(IllegalStateException.class)
+        .withLevel(WARN)
+        .exclusively())
+        .hasSize(1);
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      weigher = CacheWeigher.COLLECTION, population = Population.EMPTY,
-      keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
-  public void removeConditionally_fails(
-      Cache<String, List<Integer>> cache, Eviction<?, ?> eviction) {
-    cache.putAll(ImmutableMap.of("a", asList(1, 2, 3), "b", asList(1)));
-
-    assertThat(cache.asMap().remove("a", asList(-1, -2, -3)), is(false));
-    assertThat(cache.estimatedSize(), is(2L));
-    assertThat(eviction.weightedSize().getAsLong(), is(4L));
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.COLLECTION)
+  public void replaceConditionally_fails(Cache<String, List<Int>> cache, CacheContext context) {
+    List<Int> oldValue = intern(Int.listOf(1));
+    List<Int> newValue = intern(Int.listOf(4, 5));
+    cache.putAll(intern(Map.of("a", Int.listOf(1, 2, 3), "b", oldValue)));
+    assertThat(cache.asMap().replace("a", oldValue, newValue)).isFalse();
+    assertThat(context).hasWeightedSize(4);
+    assertThat(cache).hasSize(2);
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      weigher = CacheWeigher.COLLECTION, population = Population.EMPTY,
-      keys = ReferenceType.STRONG, values = ReferenceType.STRONG)
-  public void invalidateAll(Cache<String, List<Integer>> cache, Eviction<?, ?> eviction) {
-    cache.putAll(ImmutableMap.of("a", asList(1, 2, 3), "b", asList(1)));
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.COLLECTION)
+  public void remove(Cache<String, List<Int>> cache, CacheContext context) {
+    cache.putAll(intern(Map.of("a", Int.listOf(1, 2, 3), "b", Int.listOf(1))));
+    assertThat(cache.asMap().remove("a")).containsExactlyElementsIn(Int.listOf(1, 2, 3)).inOrder();
+    assertThat(context).hasWeightedSize(1);
+    assertThat(cache).hasSize(1);
+  }
 
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.COLLECTION)
+  public void removeConditionally(Cache<String, List<Int>> cache, CacheContext context) {
+    var oldValue = intern(Int.listOf(1, 2, 3));
+    cache.putAll(intern(Map.of("a", oldValue, "b", Int.listOf(1))));
+    assertThat(cache.asMap().remove("a", oldValue)).isTrue();
+    assertThat(context).hasWeightedSize(1);
+    assertThat(cache).hasSize(1);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.COLLECTION)
+  public void removeConditionally_fails(Cache<String, List<Int>> cache, CacheContext context) {
+    cache.putAll(intern(Map.of("a", Int.listOf(1, 2, 3), "b", Int.listOf(1))));
+    assertThat(cache.asMap().remove("a", Int.listOf(-1, -2, -3))).isFalse();
+    assertThat(context).hasWeightedSize(4);
+    assertThat(cache).hasSize(2);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.COLLECTION)
+  public void invalidateAll(Cache<String, List<Int>> cache, CacheContext context) {
+    cache.putAll(Map.of("a", intern(Int.listOf(1, 2, 3)), "b", intern(Int.listOf(1))));
     cache.invalidateAll();
-    assertThat(cache.estimatedSize(), is(0L));
-    assertThat(eviction.weightedSize().getAsLong(), is(0L));
+    assertThat(cache).isEmpty();
   }
 
-  /* ---------------- Policy: IsWeighted -------------- */
-
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine,
-      maximumSize = MaximumSize.FULL, population = Population.EMPTY)
-  public void isWeighted(CacheContext context, Eviction<Integer, Integer> eviction) {
-    assertThat(eviction.isWeighted(), is(context.isWeighted()));
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void computeIfAbsent_weigherFails(Cache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    assertThrows(IllegalStateException.class, () ->
+        cache.asMap().computeIfAbsent(context.absentKey(), key -> context.absentValue()));
+    assertThat(cache).doesNotContainKey(context.absentKey());
   }
 
-  /* ---------------- Policy: WeightedSize -------------- */
-
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine,
-      maximumSize = MaximumSize.FULL, weigher = CacheWeigher.TEN)
-  public void weightedSize(Cache<Integer, Integer> cache, Eviction<Integer, Integer> eviction) {
-    assertThat(eviction.weightedSize().getAsLong(), is(10 * cache.estimatedSize()));
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void computeIfAbsent_weigherFails_async(AsyncCache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    var future = new CompletableFuture<Int>();
+    cache.asMap().computeIfAbsent(context.absentKey(), key -> future);
+    future.complete(context.absentValue());
+    assertThat(context).stats().failures(1);
+    assertThat(cache).doesNotContainKey(context.absentKey());
+    assertThat(logEvents()
+        .withMessage("Exception thrown during asynchronous load")
+        .withThrowable(IllegalStateException.class)
+        .withLevel(WARN)
+        .exclusively())
+        .hasSize(1);
   }
 
-  /* ---------------- Policy: MaximumSize -------------- */
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.TEN)
+  public void computeIfAbsent(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    cache.asMap().computeIfAbsent(context.absentKey(), key -> context.absentValue());
+    assertThat(eviction.weightOf(context.absentKey())).hasValue(10);
+    assertThat(context).hasWeightedSize(10);
+  }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      removalListener = { Listener.DEFAULT, Listener.CONSUMING })
-  public void maximumSize_decrease(Cache<Integer, Integer> cache, CacheContext context,
-      Eviction<Integer, Integer> eviction) {
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void computeIfPresent_weigherFails(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    assertThrows(IllegalStateException.class, () ->
+        cache.asMap().computeIfPresent(context.firstKey(), (key, value) -> context.absentValue()));
+    assertThat(cache).containsExactlyEntriesIn(context.original());
+    assertThat(eviction.weightOf(context.firstKey())).hasValue(1);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void computeIfPresent_weigherFails(AsyncCache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    var future = new CompletableFuture<Int>();
+    cache.asMap().computeIfPresent(context.firstKey(), (key, value) -> future);
+    future.complete(context.absentValue());
+    assertThat(context).stats().failures(1);
+    assertThat(cache).doesNotContainKey(context.absentKey());
+    assertThat(logEvents()
+        .withMessage("Exception thrown during asynchronous load")
+        .withThrowable(IllegalStateException.class)
+        .withLevel(WARN)
+        .exclusively())
+        .hasSize(1);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.UNREACHABLE, weigher = CacheWeigher.VALUE)
+  public void computeIfPresent(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    long weightedSize = eviction.weightedSize().getAsLong()
+        + Math.abs(context.absentValue().intValue()) - context.firstKey().intValue();
+    cache.asMap().computeIfPresent(context.firstKey(), (key, value) -> context.absentValue());
+    assertThat(eviction.weightOf(context.firstKey()))
+        .hasValue(Math.abs(context.absentValue().intValue()));
+    assertThat(context).hasWeightedSize(weightedSize);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void compute_weigherFails_absent(Cache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    assertThrows(IllegalStateException.class, () ->
+        cache.asMap().compute(context.absentKey(), (key, value) -> context.absentValue()));
+    assertThat(cache).doesNotContainKey(context.absentKey());
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void compute_weigherFails_absent_async(AsyncCache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    var future = new CompletableFuture<Int>();
+    cache.asMap().compute(context.absentKey(), (key, value) -> future);
+    future.complete(context.absentValue());
+    assertThat(context).stats().failures(1);
+    assertThat(cache).doesNotContainKey(context.absentKey());
+    assertThat(logEvents()
+        .withMessage("Exception thrown during asynchronous load")
+        .withThrowable(IllegalStateException.class)
+        .withLevel(WARN)
+        .exclusively())
+        .hasSize(1);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void compute_weigherFails_present(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    assertThrows(IllegalStateException.class, () ->
+        cache.asMap().compute(context.firstKey(), (key, value) -> context.absentValue()));
+    assertThat(cache).containsExactlyEntriesIn(context.original());
+    assertThat(eviction.weightOf(context.firstKey())).hasValue(1);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void compute_weigherFails_present_async(AsyncCache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    var future = new CompletableFuture<Int>();
+    cache.asMap().compute(context.firstKey(), (key, value) -> future);
+    future.complete(context.absentValue());
+    assertThat(context).stats().failures(1);
+    assertThat(cache).doesNotContainKey(context.absentKey());
+    assertThat(logEvents()
+        .withMessage("Exception thrown during asynchronous load")
+        .withThrowable(IllegalStateException.class)
+        .withLevel(WARN)
+        .exclusively())
+        .hasSize(1);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.UNREACHABLE, weigher = CacheWeigher.VALUE)
+  public void compute_insert(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    long weightedSize = eviction.weightedSize().getAsLong()
+        + Math.abs(context.absentValue().intValue());
+    cache.asMap().compute(context.absentKey(), (key, value) -> context.absentValue());
+    assertThat(eviction.weightOf(context.absentKey()))
+        .hasValue(Math.abs(context.absentValue().intValue()));
+    assertThat(context).hasWeightedSize(weightedSize);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.UNREACHABLE, weigher = CacheWeigher.VALUE)
+  public void compute_update(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    long weightedSize = eviction.weightedSize().getAsLong()
+        + Math.abs(context.absentValue().intValue()) - context.firstKey().intValue();
+    cache.asMap().compute(context.firstKey(), (key, value) -> context.absentValue());
+    assertThat(eviction.weightOf(context.firstKey()))
+        .hasValue(Math.abs(context.absentValue().intValue()));
+    assertThat(context).hasWeightedSize(weightedSize);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void merge_weigherFails_absent(Cache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    assertThrows(IllegalStateException.class, () -> {
+      cache.asMap().merge(context.absentKey(), context.absentKey(), (key, value) -> {
+        throw new AssertionError();
+      });
+    });
+    assertThat(cache).doesNotContainKey(context.absentKey());
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void merge_weigherFails_absent_async(AsyncCache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    var future = new CompletableFuture<Int>();
+    cache.asMap().merge(context.absentKey(), future, (key, value) -> {
+      throw new AssertionError();
+    });
+    future.complete(context.absentValue());
+    assertThat(context).stats().failures(1);
+    assertThat(cache).doesNotContainKey(context.absentKey());
+    assertThat(logEvents()
+        .withMessage("Exception thrown during asynchronous load")
+        .withThrowable(IllegalStateException.class)
+        .withLevel(WARN)
+        .exclusively())
+        .hasSize(1);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void merge_weigherFails_present(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    assertThrows(IllegalStateException.class, () -> {
+      cache.asMap().merge(context.firstKey(),
+          context.absentValue(), (key, value) -> context.absentValue());
+    });
+    assertThat(cache).containsExactlyEntriesIn(context.original());
+    assertThat(eviction.weightOf(context.firstKey())).hasValue(1);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void merge_weigherFails_present_async(AsyncCache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    var future = new CompletableFuture<Int>();
+    cache.asMap().merge(context.firstKey(), future, (key, value) -> future);
+    future.complete(context.absentValue());
+    assertThat(context).stats().failures(1);
+    assertThat(cache).doesNotContainKey(context.absentKey());
+    assertThat(logEvents()
+        .withMessage("Exception thrown during asynchronous load")
+        .withThrowable(IllegalStateException.class)
+        .withLevel(WARN)
+        .exclusively())
+        .hasSize(1);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.UNREACHABLE, weigher = CacheWeigher.VALUE)
+  public void merge_absent(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    long weightedSize = eviction.weightedSize().getAsLong()
+        + Math.abs(context.absentValue().intValue());
+    cache.asMap().merge(context.absentKey(),
+        context.absentKey(), (key, value) -> context.absentValue());
+    assertThat(eviction.weightOf(context.absentKey()))
+        .hasValue(Math.abs(context.absentValue().intValue()));
+    assertThat(context).hasWeightedSize(weightedSize);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.UNREACHABLE, weigher = CacheWeigher.VALUE)
+  public void merge_update(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    long weightedSize = eviction.weightedSize().getAsLong()
+        + Math.abs(context.absentValue().intValue()) - context.firstKey().intValue();
+    cache.asMap().merge(context.firstKey(),
+        context.absentKey(), (key, value) -> context.absentValue());
+    assertThat(eviction.weightOf(context.firstKey()))
+        .hasValue(Math.abs(context.absentValue().intValue()));
+    assertThat(context).hasWeightedSize(weightedSize);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void refresh_weigherFails_absent(LoadingCache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    if (context.isAsync()) {
+      assertThrows(IllegalStateException.class, () -> cache.refresh(context.absentKey()).join());
+    } else if (context.isCaffeine()) {
+      assertThat(cache.refresh(context.absentKey())).succeedsWith(context.absentKey().negate());
+    } else {
+      assertThat(cache.refresh(context.absentKey())).succeedsWithNull();
+    }
+    assertThat(cache).doesNotContainKey(context.absentKey());
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY, implementation = Implementation.Caffeine,
+      loader = Loader.ASYNC_INCOMPLETE, maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void refresh_weigherFails_absent_async(
+      LoadingCache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    var future = cache.refresh(context.absentKey());
+    future.complete(context.absentValue());
+    assertThat(cache).doesNotContainKey(context.absentKey());
+    assertThat(logEvents()
+        .withMessage("Exception thrown during asynchronous load")
+        .withThrowable(IllegalStateException.class)
+        .withLevel(WARN)
+        .exclusively())
+        .hasSize(context.isAsync() ? 1 : 0);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL, loader = Loader.IDENTITY,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void refresh_weigherFails_present(LoadingCache<Int, Int> cache, CacheContext context) {
+    // the refresh's reload is successful but updating the cache fails, is logged, and is discarded
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    if (context.isGuava()) {
+      // an artifact of poor emulation by looking up the current value once completed.
+      assertThat(cache.refresh(context.firstKey())).succeedsWith(context.firstKey().negate());
+    } else {
+      assertThat(cache.refresh(context.firstKey())).succeedsWith(context.firstKey());
+    }
+    assertThat(cache).containsExactlyEntriesIn(context.original());
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL, implementation = Implementation.Caffeine,
+      loader = Loader.ASYNC_INCOMPLETE, maximumSize = Maximum.FULL, weigher = CacheWeigher.MOCKITO)
+  public void refresh_weigherFails_present_async(
+      LoadingCache<Int, Int> cache, CacheContext context) {
+    when(context.weigher().weigh(any(), any())).thenThrow(IllegalStateException.class);
+    var future = cache.refresh(context.firstKey());
+    future.complete(context.absentValue());
+    assertThat(cache).containsExactlyEntriesIn(context.original());
+    assertThat(logEvents()
+        .withMessage("Exception thrown during asynchronous load")
+        .withThrowable(IllegalStateException.class)
+        .withLevel(WARN)
+        .exclusively())
+        .hasSize(context.isAsync() ? 1 : 0);
+  }
+
+  /* --------------- Policy --------------- */
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL, maximumSize = Maximum.UNREACHABLE)
+  public void getIfPresentQuietly(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    var expected = eviction.hottest(Integer.MAX_VALUE).keySet();
+    assertThat(cache.policy().getIfPresentQuietly(context.firstKey())).isNotNull();
+    assertThat(cache.policy().getIfPresentQuietly(context.middleKey())).isNotNull();
+    assertThat(cache.policy().getIfPresentQuietly(context.lastKey())).isNotNull();
+    var actual = eviction.hottest(Integer.MAX_VALUE).keySet();
+    assertThat(actual).containsExactlyElementsIn(expected).inOrder();
+  }
+
+  /* --------------- Policy: IsWeighted --------------- */
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(maximumSize = Maximum.FULL, population = Population.EMPTY)
+  public void isWeighted(CacheContext context, Eviction<Int, Int> eviction) {
+    assertThat(eviction.isWeighted()).isEqualTo(context.isWeighted());
+  }
+
+  /* --------------- Policy: WeightOf --------------- */
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY,
+      maximumSize = Maximum.UNREACHABLE, weigher = CacheWeigher.VALUE)
+  public void weightOf(Cache<Int, Int> cache, CacheContext context, Eviction<Int, Int> eviction) {
+    Int key = Int.valueOf(1);
+    cache.put(key, Int.valueOf(1));
+    assertThat(eviction.weightOf(key)).hasValue(1);
+
+    cache.put(key, Int.valueOf(2));
+    assertThat(eviction.weightOf(key)).hasValue(2);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(maximumSize = Maximum.FULL)
+  public void weightOf_absent(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    assertThat(eviction.weightOf(context.absentKey())).isEmpty();
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.EMPTY, maximumSize = Maximum.FULL,
+      weigher = CacheWeigher.VALUE, mustExpireWithAnyOf = {AFTER_ACCESS, AFTER_WRITE, VARIABLE},
+      expiry = {CacheExpiry.DISABLED, CacheExpiry.CREATE, CacheExpiry.WRITE, CacheExpiry.ACCESS},
+      expireAfterAccess = {Expire.DISABLED, Expire.ONE_MINUTE}, expiryTime = Expire.ONE_MINUTE,
+      expireAfterWrite = {Expire.DISABLED, Expire.ONE_MINUTE})
+  public void weightOf_expired(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    cache.put(context.absentKey(), Int.valueOf(1));
+    context.ticker().advance(Duration.ofMinutes(2));
+    assertThat(eviction.weightOf(context.absentKey())).isEmpty();
+  }
+
+  /* --------------- Policy: WeightedSize --------------- */
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      maximumSize = Maximum.FULL, weigher = CacheWeigher.DISABLED)
+  public void weightedSize_absent(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    assertThat(eviction.weightOf(context.firstKey())).isEmpty();
+    assertThat(eviction.weightOf(context.absentKey())).isEmpty();
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(maximumSize = Maximum.FULL, weigher = CacheWeigher.TEN)
+  public void weightedSize(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    long weightedSize = 0;
+    for (Int key : cache.asMap().keySet()) {
+      weightedSize += eviction.weightOf(key).getAsInt();
+    }
+    assertThat(eviction.weightedSize()).hasValue(weightedSize);
+    assertThat(weightedSize).isEqualTo(10 * cache.estimatedSize());
+  }
+
+  /* --------------- Policy: MaximumSize --------------- */
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(maximumSize = Maximum.FULL)
+  public void maximumSize_decrease(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
     long newSize = context.maximumWeightOrSize() / 2;
     eviction.setMaximum(newSize);
-    assertThat(eviction.getMaximum(), is(newSize));
+    assertThat(eviction.getMaximum()).isEqualTo(newSize);
     if (context.initialSize() > newSize) {
       if (context.isZeroWeighted()) {
-        assertThat(cache.estimatedSize(), is(context.initialSize()));
-        assertThat(cache, hasRemovalNotifications(context, 0, RemovalCause.SIZE));
+        assertThat(cache).hasSize(context.initialSize());
+        assertThat(context).notifications().isEmpty();
       } else {
-        assertThat(cache.estimatedSize(), is(newSize));
-        assertThat(cache, hasRemovalNotifications(context, newSize, RemovalCause.SIZE));
+        assertThat(cache).hasSize(newSize);
+        assertThat(context).notifications().withCause(SIZE)
+            .contains(Maps.difference(context.original(), cache.asMap()).entriesOnlyOnLeft())
+            .exclusively();
       }
     }
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      removalListener = { Listener.DEFAULT, Listener.CONSUMING })
-  public void maximumSize_decrease_min(Cache<Integer, Integer> cache, CacheContext context,
-      Eviction<Integer, Integer> eviction) {
+  @CacheSpec(maximumSize = Maximum.FULL, weigher = { CacheWeigher.DISABLED, CacheWeigher.TEN })
+  public void maximumSize_decrease_min(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
     eviction.setMaximum(0);
-    assertThat(eviction.getMaximum(), is(0L));
+    assertThat(eviction.getMaximum()).isEqualTo(0);
     if (context.initialSize() > 0) {
-      long expect = context.isZeroWeighted() ? context.initialSize() : 0;
-      assertThat(cache.estimatedSize(), is(expect));
+      long expectedSize = context.isZeroWeighted() ? context.initialSize() : 0;
+      assertThat(cache).hasSize(expectedSize);
     }
-    assertThat(cache, hasRemovalNotifications(context, context.initialSize(), RemovalCause.SIZE));
-  }
-
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      removalListener = { Listener.DEFAULT, Listener.CONSUMING })
-  @Test(dataProvider = "caches", expectedExceptions = IllegalArgumentException.class)
-  public void maximumSize_decrease_negative(Cache<Integer, Integer> cache, CacheContext context,
-      Eviction<Integer, Integer> eviction) {
-    try {
-      eviction.setMaximum(-1);
-    } finally {
-      assertThat(eviction.getMaximum(), is(context.maximumWeightOrSize()));
-      assertThat(cache, hasRemovalNotifications(context, 0, RemovalCause.SIZE));
-    }
+    assertThat(context).notifications().withCause(SIZE)
+        .contains(context.original()).exclusively();
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL,
-      removalListener = { Listener.DEFAULT, Listener.REJECTING })
-  public void maximumSize_increase(Cache<Integer, Integer> cache, CacheContext context,
-      Eviction<Integer, Integer> eviction) {
+  @CacheSpec(maximumSize = Maximum.FULL)
+  public void maximumSize_decrease_negative(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    assertThrows(IllegalArgumentException.class, () -> eviction.setMaximum(-1));
+    assertThat(eviction.getMaximum()).isEqualTo(context.maximumWeightOrSize());
+    assertThat(context).notifications().isEmpty();
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(maximumSize = Maximum.FULL, removalListener = {Listener.DISABLED, Listener.REJECTING})
+  public void maximumSize_increase(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
     eviction.setMaximum(2 * context.maximumWeightOrSize());
-    assertThat(cache.estimatedSize(), is(context.initialSize()));
-    assertThat(eviction.getMaximum(), is(2 * context.maximumWeightOrSize()));
+    assertThat(cache).hasSize(context.initialSize());
+    assertThat(eviction.getMaximum()).isEqualTo(2 * context.maximumWeightOrSize());
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine,
-      maximumSize = MaximumSize.FULL, removalListener = Listener.REJECTING)
-  public void maximumSize_increase_max(Cache<Integer, Integer> cache, CacheContext context,
-      Eviction<Integer, Integer> eviction) {
+  @CacheSpec(maximumSize = Maximum.FULL, removalListener = Listener.REJECTING)
+  public void maximumSize_increase_max(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
     eviction.setMaximum(Long.MAX_VALUE);
-    assertThat(cache.estimatedSize(), is(context.initialSize()));
-    assertThat(eviction.getMaximum(), is(Long.MAX_VALUE - Integer.MAX_VALUE)); // impl detail
+    assertThat(cache).hasSize(context.initialSize());
+    assertThat(eviction.getMaximum()).isEqualTo(Long.MAX_VALUE - Integer.MAX_VALUE); // impl detail
   }
 
-  /* ---------------- Policy: Coldest -------------- */
+  /* --------------- Policy: Coldest --------------- */
 
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL)
-  @Test(dataProvider = "caches", expectedExceptions = UnsupportedOperationException.class)
-  public void coldest_unmodifiable(Eviction<Integer, Integer> eviction) {
-    eviction.coldest(Integer.MAX_VALUE).clear();;
-  }
-
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL)
-  @Test(dataProvider = "caches", expectedExceptions = IllegalArgumentException.class)
-  public void coldest_negative(Eviction<Integer, Integer> eviction) {
-    eviction.coldest(-1);
+  @Test(dataProvider = "caches")
+  @CacheSpec(maximumSize = Maximum.FULL)
+  public void coldest_unmodifiable(CacheContext context, Eviction<Int, Int> eviction) {
+    var result = eviction.coldest(Integer.MAX_VALUE);
+    assertThrows(UnsupportedOperationException.class, result::clear);
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL)
-  public void coldest_zero(Eviction<Integer, Integer> eviction) {
-    assertThat(eviction.coldest(0), is(emptyMap()));
+  @CacheSpec(maximumSize = Maximum.FULL)
+  public void coldest_negative(CacheContext context, Eviction<Int, Int> eviction) {
+    assertThrows(IllegalArgumentException.class, () -> eviction.coldest(-1));
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
-      initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = MaximumSize.FULL)
-  public void coldest_partial(CacheContext context, Eviction<Integer, Integer> eviction) {
-    int count = (int) context.initialSize() / 2;
-    assertThat(eviction.coldest(count).size(), is(count));
+  @CacheSpec(maximumSize = Maximum.FULL)
+  public void coldest_zero(CacheContext context, Eviction<Int, Int> eviction) {
+    assertThat(eviction.coldest(0)).isExhaustivelyEmpty();
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
-      initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = MaximumSize.FULL,
-      weigher = { CacheWeigher.DEFAULT, CacheWeigher.TEN },
-      removalListener = { Listener.DEFAULT, Listener.REJECTING })
-  public void coldest_order(CacheContext context, Eviction<Integer, Integer> eviction) {
-    int size = context.original().size();
-    int main = (int) (BoundedLocalCache.PERCENT_MAIN * context.maximumSize());
-    int eden = size - main;
-    if (eden < context.weigher().weigh(null, null)) {
-      main += eden;
+  @CacheSpec(population = Population.FULL,
+      initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void coldest_partial(CacheContext context, Eviction<Int, Int> eviction) {
+    int count = context.original().size() / 2;
+    assertThat(eviction.coldest(count)).hasSize(count);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL, initialCapacity = InitialCapacity.EXCESSIVE,
+      maximumSize = Maximum.FULL, weigher = {CacheWeigher.DISABLED, CacheWeigher.TEN},
+      removalListener = {Listener.DISABLED, Listener.REJECTING})
+  public void coldest_order(CacheContext context, Eviction<Int, Int> eviction) {
+    var keys = new LinkedHashSet<>(context.original().keySet());
+    var coldest = new LinkedHashSet<>(eviction.coldest(Integer.MAX_VALUE).keySet());
+
+    // Ignore the last key; hard to predict with W-TinyLFU
+    keys.remove(context.lastKey());
+    coldest.remove(context.lastKey());
+    assertThat(coldest).containsExactlyElementsIn(keys).inOrder();
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void coldest_snapshot(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    var coldest = eviction.coldest(Integer.MAX_VALUE);
+    cache.invalidateAll();
+    assertThat(coldest).containsExactlyEntriesIn(context.original());
+  }
+
+  @SuppressWarnings("NullAway")
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void coldestFunc_null(CacheContext context, Eviction<Int, Int> eviction) {
+    assertThrows(NullPointerException.class, () -> eviction.coldest(null));
+  }
+
+  @SuppressWarnings("NullAway")
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void coldestFunc_nullResult(CacheContext context, Eviction<Int, Int> eviction) {
+    var result = eviction.coldest(stream -> null);
+    assertThat(result).isNull();
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void coldestFunc_throwsException(CacheContext context, Eviction<Int, Int> eviction) {
+    var expected = new IllegalStateException();
+    var actual = assertThrows(IllegalStateException.class, () ->
+        eviction.coldest(stream -> { throw expected; }));
+    assertThat(actual).isSameInstanceAs(expected);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void coldestFunc_concurrentModification(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    assertThrows(ConcurrentModificationException.class, () -> {
+      eviction.coldest(stream -> {
+        cache.put(context.absentKey(), context.absentValue());
+        throw assertThrows(ConcurrentModificationException.class, stream::count);
+      });
+    });
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void coldestFunc_closed(CacheContext context, Eviction<Int, Int> eviction) {
+    var stream = eviction.coldest(identity());
+    var exception = assertThrows(IllegalStateException.class, () -> stream.forEach(e -> {}));
+    assertThat(exception).hasMessageThat().isEqualTo("source already consumed or closed");
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void coldestFunc_partial(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    var result = eviction.coldest(stream -> stream
+        .limit(context.initialSize() / 2)
+        .collect(toImmutableMap(Map.Entry::getKey, Map.Entry::getValue)));
+    assertThat(cache.asMap()).containsAtLeastEntriesIn(result);
+    assertThat(cache).containsExactlyEntriesIn(context.original());
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void coldestFunc_full(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    var result = eviction.coldest(stream -> stream
+        .collect(toImmutableMap(Map.Entry::getKey, Map.Entry::getValue)));
+    assertThat(cache).containsExactlyEntriesIn(result);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL, initialCapacity = InitialCapacity.EXCESSIVE,
+      maximumSize = Maximum.FULL, weigher = {CacheWeigher.DISABLED, CacheWeigher.TEN},
+      removalListener = {Listener.DISABLED, Listener.REJECTING})
+  public void coldestFunc_order(CacheContext context, Eviction<Int, Int> eviction) {
+    var keys = new LinkedHashSet<>(context.original().keySet());
+    var coldest = new LinkedHashSet<>(eviction.coldest(stream ->
+        stream.map(Map.Entry::getKey).collect(toImmutableList())));
+
+    // Ignore the last key; hard to predict with W-TinyLFU
+    keys.remove(context.lastKey());
+    coldest.remove(context.lastKey());
+    assertThat(coldest).containsExactlyElementsIn(keys).inOrder();
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void coldestFunc_metadata(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    var entries = eviction.coldest(stream -> stream.collect(toImmutableList()));
+    for (var entry : entries) {
+      assertThat(context).containsEntry(entry);
     }
-
-    Iterable<Integer> keys = Iterables.concat(
-        Iterables.skip(context.original().keySet(), main),
-        Iterables.limit(ImmutableList.copyOf(context.original().keySet()), main));
-    Set<Integer> coldest = eviction.coldest(Integer.MAX_VALUE).keySet();
-    assertThat(coldest, contains(Iterables.toArray(keys, Integer.class)));
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, initialCapacity = InitialCapacity.EXCESSIVE,
-      maximumSize = MaximumSize.FULL)
-  public void coldest_snapshot(Cache<Integer, Integer> cache, CacheContext context,
-      Eviction<Integer, Integer> eviction) {
-    Map<Integer, Integer> coldest = eviction.coldest(Integer.MAX_VALUE);
+  @CacheSpec(maximumSize = Maximum.FULL)
+  public void coldestWeight_unmodifiable(CacheContext context, Eviction<Int, Int> eviction) {
+    var results = eviction.coldestWeighted(Long.MAX_VALUE);
+    assertThrows(UnsupportedOperationException.class, results::clear);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(maximumSize = Maximum.FULL)
+  public void coldestWeighted_negative(CacheContext context, Eviction<Int, Int> eviction) {
+    assertThrows(IllegalArgumentException.class, () -> eviction.coldestWeighted(-1));
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(maximumSize = Maximum.FULL)
+  public void coldestWeighted_zero(CacheContext context, Eviction<Int, Int> eviction) {
+    if (context.cacheWeigher() == CacheWeigher.ZERO) {
+      assertThat(eviction.coldestWeighted(0)).isEqualTo(context.original());
+    } else {
+      assertThat(eviction.coldestWeighted(0)).isExhaustivelyEmpty();
+    }
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void coldestWeighted_partial(CacheContext context, Eviction<Int, Int> eviction) {
+    long weightedSize = context.original().entrySet().stream()
+        .mapToLong(entry -> context.weigher().weigh(entry.getKey(), entry.getValue()))
+        .limit(context.original().size() / 2)
+        .sum();
+    var coldest = eviction.coldestWeighted(weightedSize);
+    var actualWeighedSize = coldest.entrySet().stream()
+        .mapToLong(entry -> context.weigher().weigh(entry.getKey(), entry.getValue()))
+        .sum();
+    if (context.isWeighted()) {
+      assertThat(coldest).hasSizeIn(Range.closed(0, context.original().size()));
+    } else {
+      assertThat(coldest).hasSize(context.original().size() / 2);
+    }
+    assertThat(actualWeighedSize).isIn(Range.closed(0L, weightedSize));
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL, initialCapacity = InitialCapacity.EXCESSIVE,
+      maximumSize = Maximum.FULL, weigher = {CacheWeigher.DISABLED, CacheWeigher.TEN},
+      removalListener = {Listener.DISABLED, Listener.REJECTING})
+  public void coldestWeighted_order(CacheContext context, Eviction<Int, Int> eviction) {
+    var keys = new LinkedHashSet<>(context.original().keySet());
+    var coldest = new LinkedHashSet<>(eviction.coldestWeighted(Long.MAX_VALUE).keySet());
+
+    // Ignore the last key; hard to predict with W-TinyLFU
+    keys.remove(context.lastKey());
+    coldest.remove(context.lastKey());
+    assertThat(coldest).containsExactlyElementsIn(keys).inOrder();
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void coldestWeighted_snapshot(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    var coldest = eviction.coldestWeighted(Long.MAX_VALUE);
     cache.invalidateAll();
-    assertThat(coldest, is(equalTo(context.original())));
+    assertThat(coldest).containsExactlyEntriesIn(context.original());
   }
 
-  /* ---------------- Policy: Hottest -------------- */
+  /* --------------- Policy: Hottest --------------- */
 
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL)
-  @Test(dataProvider = "caches", expectedExceptions = UnsupportedOperationException.class)
-  public void hottest_unmodifiable(Eviction<Integer, Integer> eviction) {
-    eviction.hottest(Integer.MAX_VALUE).clear();;
-  }
-
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL)
-  @Test(dataProvider = "caches", expectedExceptions = IllegalArgumentException.class)
-  public void hottest_negative(Eviction<Integer, Integer> eviction) {
-    eviction.hottest(-1);
+  @Test(dataProvider = "caches")
+  @CacheSpec(maximumSize = Maximum.FULL)
+  public void hottest_unmodifiable(CacheContext context, Eviction<Int, Int> eviction) {
+    var result = eviction.hottest(Integer.MAX_VALUE);
+    assertThrows(UnsupportedOperationException.class, result::clear);
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, maximumSize = MaximumSize.FULL)
-  public void hottest_zero(Eviction<Integer, Integer> eviction) {
-    assertThat(eviction.hottest(0), is(emptyMap()));
+  @CacheSpec(maximumSize = Maximum.FULL)
+  public void hottest_negative(CacheContext context, Eviction<Int, Int> eviction) {
+    assertThrows(IllegalArgumentException.class, () -> eviction.hottest(-1));
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
-      initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = MaximumSize.FULL)
-  public void hottest_partial(CacheContext context, Eviction<Integer, Integer> eviction) {
-    int count = (int) context.initialSize() / 2;
-    assertThat(eviction.hottest(count).size(), is(count));
+  @CacheSpec(maximumSize = Maximum.FULL)
+  public void hottest_zero(CacheContext context, Eviction<Int, Int> eviction) {
+    assertThat(eviction.hottest(0)).isExhaustivelyEmpty();
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, population = Population.FULL,
-      initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = MaximumSize.FULL,
-      removalListener = { Listener.DEFAULT, Listener.REJECTING })
-  public void hottest_order(CacheContext context, Eviction<Integer, Integer> eviction) {
-    Map<Integer, Integer> hottest = eviction.hottest(Integer.MAX_VALUE);
-    Set<Integer> keys = new LinkedHashSet<>(ImmutableList.copyOf(hottest.keySet()).reverse());
-    assertThat(keys, contains(context.original().keySet().toArray(new Integer[0])));
+  @CacheSpec(population = Population.FULL,
+      initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void hottest_partial(CacheContext context, Eviction<Int, Int> eviction) {
+    int count = context.original().size() / 2;
+    assertThat(eviction.hottest(count)).hasSize(count);
   }
 
   @Test(dataProvider = "caches")
-  @CacheSpec(implementation = Implementation.Caffeine, initialCapacity = InitialCapacity.EXCESSIVE,
-      maximumSize = MaximumSize.FULL)
-  public void hottest_snapshot(Cache<Integer, Integer> cache, CacheContext context,
-      Eviction<Integer, Integer> eviction) {
-    Map<Integer, Integer> hottest = eviction.hottest(Integer.MAX_VALUE);
+  @CacheSpec(population = Population.FULL, initialCapacity = InitialCapacity.EXCESSIVE,
+      maximumSize = Maximum.FULL, removalListener = {Listener.DISABLED, Listener.REJECTING})
+  public void hottest_order(CacheContext context, Eviction<Int, Int> eviction) {
+    var keys = new LinkedHashSet<>(context.original().keySet());
+    var hottest = eviction.hottest(Integer.MAX_VALUE).keySet();
+    var coldest = new LinkedHashSet<>(ImmutableList.copyOf(hottest).reverse());
+
+    // Ignore the last key; hard to predict with W-TinyLFU
+    keys.remove(context.lastKey());
+    coldest.remove(context.lastKey());
+    assertThat(coldest).containsExactlyElementsIn(keys).inOrder();
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void hottest_snapshot(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    var hottest = eviction.hottest(Integer.MAX_VALUE);
     cache.invalidateAll();
-    assertThat(hottest, is(equalTo(context.original())));
+    assertThat(hottest).containsExactlyEntriesIn(context.original());
+  }
+
+  @SuppressWarnings("NullAway")
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void hottestFunc_null(CacheContext context, Eviction<Int, Int> eviction) {
+    assertThrows(NullPointerException.class, () -> eviction.hottest(null));
+  }
+
+  @SuppressWarnings("NullAway")
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void hottestFunc_nullResult(CacheContext context, Eviction<Int, Int> eviction) {
+    var result = eviction.hottest(stream -> null);
+    assertThat(result).isNull();
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void hottestFunc_throwsException(CacheContext context, Eviction<Int, Int> eviction) {
+    var expected = new IllegalStateException();
+    var actual = assertThrows(IllegalStateException.class, () ->
+        eviction.hottest(stream -> { throw expected; }));
+    assertThat(actual).isSameInstanceAs(expected);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void hottestFunc_concurrentModification(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    assertThrows(ConcurrentModificationException.class, () -> {
+      eviction.hottest(stream -> {
+        cache.put(context.absentKey(), context.absentValue());
+        throw assertThrows(ConcurrentModificationException.class, stream::count);
+      });
+    });
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void hottestFunc_closed(CacheContext context, Eviction<Int, Int> eviction) {
+    var stream = eviction.hottest(identity());
+    var exception = assertThrows(IllegalStateException.class, () -> stream.forEach(e -> {}));
+    assertThat(exception).hasMessageThat().isEqualTo("source already consumed or closed");
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void hottestFunc_partial(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    var result = eviction.hottest(stream -> stream
+        .limit(context.initialSize() / 2)
+        .collect(toImmutableMap(Map.Entry::getKey, Map.Entry::getValue)));
+    assertThat(cache.asMap()).containsAtLeastEntriesIn(result);
+    assertThat(cache).containsExactlyEntriesIn(context.original());
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void hottestFunc_full(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    var result = eviction.hottest(stream -> stream
+        .collect(toImmutableMap(Map.Entry::getKey, Map.Entry::getValue)));
+    assertThat(cache).containsExactlyEntriesIn(result);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL, initialCapacity = InitialCapacity.EXCESSIVE,
+      maximumSize = Maximum.FULL, removalListener = {Listener.DISABLED, Listener.REJECTING})
+  public void hottestFunc_order(CacheContext context, Eviction<Int, Int> eviction) {
+    var keys = new LinkedHashSet<>(context.original().keySet());
+    var hottest = eviction.hottest(stream ->
+        stream.map(Map.Entry::getKey).collect(toImmutableList()));
+    var coldest = new LinkedHashSet<>(hottest.reverse());
+
+    // Ignore the last key; hard to predict with W-TinyLFU
+    keys.remove(context.lastKey());
+    coldest.remove(context.lastKey());
+    assertThat(coldest).containsExactlyElementsIn(keys).inOrder();
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void hottestFunc_metadata(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    var entries = eviction.hottest(stream -> stream.collect(toImmutableList()));
+    for (var entry : entries) {
+      assertThat(context).containsEntry(entry);
+    }
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void hottestWeighted_snapshot(Cache<Int, Int> cache,
+      CacheContext context, Eviction<Int, Int> eviction) {
+    var hottest = eviction.hottestWeighted(Integer.MAX_VALUE);
+    cache.invalidateAll();
+    assertThat(hottest).containsExactlyEntriesIn(context.original());
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(maximumSize = Maximum.FULL)
+  public void hottestWeighted_unmodifiable(CacheContext context, Eviction<Int, Int> eviction) {
+    var result = eviction.hottestWeighted(Long.MAX_VALUE);
+    assertThrows(UnsupportedOperationException.class, result::clear);
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(maximumSize = Maximum.FULL)
+  public void hottestWeighted_negative(CacheContext context, Eviction<Int, Int> eviction) {
+    assertThrows(IllegalArgumentException.class, () -> eviction.hottestWeighted(-1));
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(maximumSize = Maximum.FULL)
+  public void hottestWeighted_zero(CacheContext context, Eviction<Int, Int> eviction) {
+    if (context.cacheWeigher() == CacheWeigher.ZERO) {
+      assertThat(eviction.hottestWeighted(0)).isEqualTo(context.original());
+    } else {
+      assertThat(eviction.hottestWeighted(0)).isExhaustivelyEmpty();
+    }
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL,
+      initialCapacity = InitialCapacity.EXCESSIVE, maximumSize = Maximum.FULL)
+  public void hottestWeighted_partial(CacheContext context, Eviction<Int, Int> eviction) {
+    long weightedSize = context.original().entrySet().stream()
+        .mapToLong(entry -> context.weigher().weigh(entry.getKey(), entry.getValue()))
+        .limit(context.original().size() / 2)
+        .sum();
+    var hottest = eviction.hottestWeighted(weightedSize);
+    var actualWeighedSize = hottest.entrySet().stream()
+        .mapToLong(entry -> context.weigher().weigh(entry.getKey(), entry.getValue()))
+        .sum();
+    if (context.isWeighted()) {
+      assertThat(hottest).hasSizeIn(Range.closed(0, context.original().size()));
+    } else {
+      assertThat(hottest).hasSize(context.original().size() / 2);
+    }
+    assertThat(actualWeighedSize).isIn(Range.closed(0L, weightedSize));
+  }
+
+  @Test(dataProvider = "caches")
+  @CacheSpec(population = Population.FULL, initialCapacity = InitialCapacity.EXCESSIVE,
+      maximumSize = Maximum.FULL, removalListener = {Listener.DISABLED, Listener.REJECTING})
+  public void hottestWeighted_order(CacheContext context, Eviction<Int, Int> eviction) {
+    var keys = new LinkedHashSet<>(context.original().keySet());
+    var hottest = eviction.hottestWeighted(Long.MAX_VALUE).keySet();
+    var coldest = new LinkedHashSet<>(ImmutableList.copyOf(hottest).reverse());
+
+    // Ignore the last key; hard to predict with W-TinyLFU
+    keys.remove(context.lastKey());
+    coldest.remove(context.lastKey());
+    assertThat(coldest).containsExactlyElementsIn(keys).inOrder();
   }
 }
