@@ -15,28 +15,29 @@
  */
 package com.github.benmanes.caffeine.cache;
 
-import static com.github.benmanes.caffeine.testing.IsEmptyIterable.deeplyEmpty;
+import static com.github.benmanes.caffeine.testing.CollectionSubject.assertThat;
 import static com.google.common.collect.Iterators.elementsEqual;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.contains;
-import static org.hamcrest.Matchers.hasSize;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.not;
-import static org.hamcrest.Matchers.nullValue;
+import static com.google.common.truth.Truth.assertThat;
+import static java.util.Objects.requireNonNull;
+import static org.junit.Assert.assertThrows;
 
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.Deque;
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.concurrent.ThreadLocalRandom;
 
+import org.jspecify.annotations.Nullable;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import com.github.benmanes.caffeine.cache.AccessOrderDeque.AccessOrder;
 import com.github.benmanes.caffeine.cache.LinkedDeque.PeekingIterator;
 import com.github.benmanes.caffeine.cache.WriteOrderDeque.WriteOrder;
+import com.google.common.base.MoreObjects;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Iterators;
@@ -46,59 +47,60 @@ import com.google.common.collect.Iterators;
  *
  * @author ben.manes@gmail.com (Ben Manes)
  */
+@SuppressWarnings({"ClassEscapesDefinedScope", "PMD.LooseCoupling"})
 public final class LinkedDequeTest {
   static final int SIZE = 100;
 
   @Test(dataProvider = "empty")
   public void clear_whenEmpty(Deque<?> deque) {
     deque.clear();
-    assertThat(deque, is(deeplyEmpty()));
+    assertThat(deque).isExhaustivelyEmpty();
   }
 
   @Test(dataProvider = "full")
   public void clear_whenPopulated(Deque<?> deque) {
     deque.clear();
-    assertThat(deque, is(deeplyEmpty()));
+    assertThat(deque).isExhaustivelyEmpty();
   }
 
   @Test(dataProvider = "empty")
   public void isEmpty_whenEmpty(Deque<?> deque) {
-    assertThat(deque.isEmpty(), is(true));
+    assertThat(deque.isEmpty()).isTrue();
   }
 
   @Test(dataProvider = "full")
   public void isEmpty_whenPopulated(Deque<?> deque) {
-    assertThat(deque.isEmpty(), is(false));
+    assertThat(deque.isEmpty()).isFalse();
   }
 
   @Test(dataProvider = "empty")
   public void size_whenEmpty(Deque<?> deque) {
-    assertThat(deque.size(), is(0));
+    assertThat(deque.size()).isEqualTo(0);
   }
 
   @Test(dataProvider = "full")
   public void size_whenPopulated(Deque<?> deque) {
-    assertThat(deque.size(), is(SIZE));
-    assertThat(Iterables.size(deque), is(SIZE));
+    assertThat(deque.size()).isEqualTo(SIZE);
   }
 
   @Test(dataProvider = "empty")
   public void contains_withNull(Deque<?> deque) {
-    assertThat(deque.contains(null), is(false));
+    assertThat(deque.contains(null)).isFalse();
   }
 
   @Test(dataProvider = "full")
   public void contains_whenFound(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.contains(Iterables.get(deque, SIZE / 2)), is(true));
+    int index = ThreadLocalRandom.current().nextInt(deque.size());
+    assertThat(deque.contains(Iterables.get(deque, index))).isTrue();
   }
 
   @Test(dataProvider = "full")
   public void contains_whenNotFound(LinkedDeque<LinkedValue> deque) {
-    LinkedValue unlinked = new LinkedValue(1);
-    assertThat(deque.contains(unlinked), is(false));
+    var unlinked = new LinkedValue(1);
+    assertThat(deque.contains(unlinked)).isFalse();
   }
 
-  /* ---------------- Move -------------- */
+  /* --------------- Move --------------- */
 
   @Test(dataProvider = "full")
   public void moveToFront_first(LinkedDeque<LinkedValue> deque) {
@@ -115,10 +117,12 @@ public final class LinkedDequeTest {
     checkMoveToFront(deque, deque.getLast());
   }
 
-  private void checkMoveToFront(LinkedDeque<LinkedValue> deque, LinkedValue element) {
+  private static void checkMoveToFront(LinkedDeque<LinkedValue> deque,
+      @Nullable LinkedValue element) {
+    assertThat(element).isNotNull();
     deque.moveToFront(element);
-    assertThat(deque.peekFirst(), is(element));
-    assertThat(deque.size(), is(SIZE));
+    assertThat(deque).hasSize(SIZE);
+    assertThat(deque.peekFirst()).isEqualTo(element);
   }
 
   @Test(dataProvider = "full")
@@ -136,658 +140,707 @@ public final class LinkedDequeTest {
     checkMoveToBack(deque, deque.getLast());
   }
 
-  private void checkMoveToBack(LinkedDeque<LinkedValue> deque, LinkedValue element) {
+  private static void checkMoveToBack(LinkedDeque<LinkedValue> deque,
+      @Nullable LinkedValue element) {
+    assertThat(element).isNotNull();
     deque.moveToBack(element);
-    assertThat(deque.size(), is(SIZE));
-    assertThat(deque.getLast(), is(element));
+    assertThat(deque).hasSize(SIZE);
+    assertThat(deque.getLast()).isEqualTo(element);
   }
 
-  /* ---------------- First / Last -------------- */
+  /* --------------- First / Last --------------- */
 
   @Test(dataProvider = "empty")
   public void isFirst_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.isFirst(new LinkedValue(0)), is(false));
-    assertThat(deque.isFirst(null), is(false));
+    assertThat(deque.isFirst(new LinkedValue(0))).isFalse();
+    assertThat(deque.isFirst(null)).isFalse();
   }
 
   @Test(dataProvider = "full")
   public void isFirst_whenPopulated(AbstractLinkedDeque<LinkedValue> deque) {
-    LinkedValue first = deque.first;
-    assertThat(deque.isFirst(first), is(true));
-    assertThat(deque.first, is(first));
-    assertThat(deque, hasSize(SIZE));
-    assertThat(deque.contains(first), is(true));
+    var first = requireNonNull(deque.first);
+    assertThat(deque).hasSize(SIZE);
+    assertThat(deque.isFirst(first)).isTrue();
+    assertThat(deque.contains(first)).isTrue();
+    assertThat(deque.first).isSameInstanceAs(first);
   }
 
   @Test(dataProvider = "empty")
   public void isLast_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.isLast(new LinkedValue(0)), is(false));
-    assertThat(deque.isLast(null), is(false));
+    assertThat(deque.isLast(new LinkedValue(0))).isFalse();
+    assertThat(deque.isLast(null)).isFalse();
   }
 
   @Test(dataProvider = "full")
   public void isLast_whenPopulated(AbstractLinkedDeque<LinkedValue> deque) {
-    LinkedValue last = deque.last;
-    assertThat(deque.isLast(last), is(true));
-    assertThat(deque.last, is(last));
-    assertThat(deque, hasSize(SIZE));
-    assertThat(deque.contains(last), is(true));
+    var last = requireNonNull(deque.last);
+    assertThat(deque).hasSize(SIZE);
+    assertThat(deque.isLast(last)).isTrue();
+    assertThat(deque.contains(last)).isTrue();
+    assertThat(deque.last).isSameInstanceAs(last);
   }
 
-  /* ---------------- Peek -------------- */
+  /* --------------- Peek --------------- */
 
   @Test(dataProvider = "empty")
   public void peek_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.peek(), is(nullValue()));
+    assertThat(deque.peek()).isNull();
   }
 
   @Test(dataProvider = "full")
   public void peek_whenPopulated(AbstractLinkedDeque<LinkedValue> deque) {
-    LinkedValue first = deque.first;
-    assertThat(deque.peek(), is(first));
-    assertThat(deque.first, is(first));
-    assertThat(deque, hasSize(SIZE));
-    assertThat(deque.contains(first), is(true));
+    var first = requireNonNull(deque.first);
+    assertThat(deque).hasSize(SIZE);
+    assertThat(deque.contains(first)).isTrue();
+    assertThat(deque.first).isSameInstanceAs(first);
+    assertThat(deque.peek()).isSameInstanceAs(first);
   }
 
   @Test(dataProvider = "empty")
   public void peekFirst_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.peekFirst(), is(nullValue()));
+    assertThat(deque.peekFirst()).isNull();
   }
 
   @Test(dataProvider = "full")
   public void peekFirst_whenPopulated(AbstractLinkedDeque<LinkedValue> deque) {
-    LinkedValue first = deque.first;
-    assertThat(deque.peekFirst(), is(first));
-    assertThat(deque.first, is(first));
-    assertThat(deque, hasSize(SIZE));
-    assertThat(deque.contains(first), is(true));
+    var first = requireNonNull(deque.first);
+    assertThat(deque).hasSize(SIZE);
+    assertThat(deque.contains(first)).isTrue();
+    assertThat(deque.first).isSameInstanceAs(first);
+    assertThat(deque.peekFirst()).isSameInstanceAs(first);
   }
 
   @Test(dataProvider = "empty")
   public void peekLast_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.peekLast(), is(nullValue()));
+    assertThat(deque.peekLast()).isNull();
   }
 
   @Test(dataProvider = "full")
   public void peekLast_whenPopulated(AbstractLinkedDeque<LinkedValue> deque) {
-    LinkedValue last = deque.last;
-    assertThat(deque.peekLast(), is(last));
-    assertThat(deque.last, is(last));
-    assertThat(deque, hasSize(SIZE));
-    assertThat(deque.contains(last), is(true));
+    var last = requireNonNull(deque.last);
+    assertThat(deque).hasSize(SIZE);
+    assertThat(deque.contains(last)).isTrue();
+    assertThat(deque.last).isSameInstanceAs(last);
+    assertThat(deque.peekLast()).isSameInstanceAs(last);
   }
 
-  /* ---------------- Get -------------- */
+  /* --------------- Get --------------- */
 
-  @Test(dataProvider = "empty", expectedExceptions = NoSuchElementException.class)
+  @Test(dataProvider = "empty")
   public void getFirst_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    deque.getFirst();
+    assertThrows(NoSuchElementException.class, deque::getFirst);
   }
 
   @Test(dataProvider = "full")
   public void getFirst_whenPopulated(AbstractLinkedDeque<LinkedValue> deque) {
-    LinkedValue first = deque.first;
-    assertThat(deque.getFirst(), is(first));
-    assertThat(deque.first, is(first));
-    assertThat(deque, hasSize(SIZE));
-    assertThat(deque.contains(first), is(true));
+    var first = requireNonNull(deque.first);
+    assertThat(deque).hasSize(SIZE);
+    assertThat(deque.contains(first)).isTrue();
+    assertThat(deque.first).isSameInstanceAs(first);
+    assertThat(deque.getFirst()).isSameInstanceAs(first);
   }
 
-  @Test(dataProvider = "empty", expectedExceptions = NoSuchElementException.class)
+  @Test(dataProvider = "empty")
   public void getLast_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    deque.getLast();
+    assertThrows(NoSuchElementException.class, deque::getLast);
   }
 
   @Test(dataProvider = "full")
   public void getLast_whenPopulated(AbstractLinkedDeque<LinkedValue> deque) {
-    LinkedValue last = deque.last;
-    assertThat(deque.getLast(), is(last));
-    assertThat(deque.last, is(last));
-    assertThat(deque, hasSize(SIZE));
-    assertThat(deque.contains(last), is(true));
+    var last = requireNonNull(deque.last);
+    assertThat(deque).hasSize(SIZE);
+    assertThat(deque.contains(last)).isTrue();
+    assertThat(deque.last).isSameInstanceAs(last);
+    assertThat(deque.getLast()).isSameInstanceAs(last);
   }
 
-  /* ---------------- Element -------------- */
+  /* --------------- Element --------------- */
 
-  @Test(dataProvider = "empty", expectedExceptions = NoSuchElementException.class)
+  @Test(dataProvider = "empty")
   public void element_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    deque.element();
+    assertThrows(NoSuchElementException.class, deque::element);
   }
 
   @Test(dataProvider = "full")
   public void element_whenPopulated(AbstractLinkedDeque<LinkedValue> deque) {
-    LinkedValue first = deque.first;
-    assertThat(deque.element(), is(first));
-    assertThat(deque.first, is(first));
-    assertThat(deque, hasSize(SIZE));
-    assertThat(deque.contains(first), is(true));
+    var first = requireNonNull(deque.first);
+    assertThat(deque).hasSize(SIZE);
+    assertThat(deque.contains(first)).isTrue();
+    assertThat(deque.first).isSameInstanceAs(first);
+    assertThat(deque.element()).isSameInstanceAs(first);
   }
 
-  /* ---------------- Offer -------------- */
+  /* --------------- Offer --------------- */
 
   @Test(dataProvider = "empty")
   public void offer_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    LinkedValue value = new LinkedValue(1);
-    assertThat(deque.offer(value), is(true));
-    assertThat(deque.peekFirst(), is(value));
-    assertThat(deque.peekLast(), is(value));
-    assertThat(deque, hasSize(1));
+    var value = new LinkedValue(1);
+    assertThat(deque.offer(value)).isTrue();
+    assertThat(deque.peekFirst()).isSameInstanceAs(value);
+    assertThat(deque.peekLast()).isSameInstanceAs(value);
+    assertThat(deque).hasSize(1);
   }
 
   @Test(dataProvider = "full")
   public void offer_whenPopulated(LinkedDeque<LinkedValue> deque) {
-    LinkedValue value = new LinkedValue(SIZE);
-    assertThat(deque.offer(value), is(true));
-    assertThat(deque.peekFirst(), is(not(value)));
-    assertThat(deque.peekLast(), is(value));
-    assertThat(deque, hasSize(SIZE + 1));
+    var value = new LinkedValue(SIZE);
+    assertThat(deque.offer(value)).isTrue();
+    assertThat(deque.peekFirst()).isNotSameInstanceAs(value);
+    assertThat(deque.peekLast()).isSameInstanceAs(value);
+    assertThat(deque).hasSize(SIZE + 1);
   }
 
   @Test(dataProvider = "full")
   public void offer_whenLinked(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.offer(deque.peek()), is(false));
-    assertThat(deque, hasSize(SIZE));
+    assertThat(deque.offer(deque.peek())).isFalse();
+    assertThat(deque).hasSize(SIZE);
   }
 
   @Test(dataProvider = "empty")
   public void offerFirst_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    LinkedValue value = new LinkedValue(1);
-    assertThat(deque.offerFirst(value), is(true));
-    assertThat(deque.peekFirst(), is(value));
-    assertThat(deque.peekLast(), is(value));
-    assertThat(deque, hasSize(1));
+    var value = new LinkedValue(1);
+    assertThat(deque.offerFirst(value)).isTrue();
+    assertThat(deque.peekFirst()).isSameInstanceAs(value);
+    assertThat(deque.peekLast()).isSameInstanceAs(value);
+    assertThat(deque).hasSize(1);
   }
 
   @Test(dataProvider = "full")
   public void offerFirst_whenPopulated(LinkedDeque<LinkedValue> deque) {
-    LinkedValue value = new LinkedValue(SIZE);
-    assertThat(deque.offerFirst(value), is(true));
-    assertThat(deque.peekFirst(), is(value));
-    assertThat(deque.peekLast(), is(not(value)));
-    assertThat(deque, hasSize(SIZE + 1));
+    var value = new LinkedValue(SIZE);
+    assertThat(deque.offerFirst(value)).isTrue();
+    assertThat(deque.peekFirst()).isSameInstanceAs(value);
+    assertThat(deque.peekLast()).isNotSameInstanceAs(value);
+    assertThat(deque).hasSize(SIZE + 1);
   }
 
   @Test(dataProvider = "full")
   public void offerFirst_whenLinked(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.offerFirst(deque.peek()), is(false));
-    assertThat(deque, hasSize(SIZE));
+    assertThat(deque.offerFirst(deque.peek())).isFalse();
+    assertThat(deque).hasSize(SIZE);
   }
 
   @Test(dataProvider = "empty")
   public void offerLast_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    LinkedValue value = new LinkedValue(1);
-    assertThat(deque.offerLast(value), is(true));
-    assertThat(deque.peekFirst(), is(value));
-    assertThat(deque.peekLast(), is(value));
-    assertThat(deque, hasSize(1));
+    var value = new LinkedValue(1);
+    assertThat(deque.offerLast(value)).isTrue();
+    assertThat(deque.peekFirst()).isSameInstanceAs(value);
+    assertThat(deque.peekLast()).isSameInstanceAs(value);
+    assertThat(deque).hasSize(1);
   }
 
   @Test(dataProvider = "full")
   public void offerLast_whenPopulated(LinkedDeque<LinkedValue> deque) {
-    LinkedValue value = new LinkedValue(SIZE);
-    assertThat(deque.offerLast(value), is(true));
-    assertThat(deque.peekFirst(), is(not(value)));
-    assertThat(deque.peekLast(), is(value));
-    assertThat(deque, hasSize(SIZE + 1));
+    var value = new LinkedValue(SIZE);
+    assertThat(deque.offerLast(value)).isTrue();
+    assertThat(deque.peekFirst()).isNotSameInstanceAs(value);
+    assertThat(deque.peekLast()).isSameInstanceAs(value);
+    assertThat(deque).hasSize(SIZE + 1);
   }
 
   @Test(dataProvider = "full")
   public void offerLast_whenLinked(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.offerLast(deque.peek()), is(false));
-    assertThat(deque, hasSize(SIZE));
+    assertThat(deque.offerLast(deque.peek())).isFalse();
+    assertThat(deque).hasSize(SIZE);
   }
 
-  /* ---------------- Add -------------- */
+  /* --------------- Add --------------- */
 
   @Test(dataProvider = "empty")
   public void add_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    LinkedValue value = new LinkedValue(1);
-    assertThat(deque.add(value), is(true));
-    assertThat(deque.peekFirst(), is(value));
-    assertThat(deque.peekLast(), is(value));
-    assertThat(deque, hasSize(1));
+    var value = new LinkedValue(1);
+    assertThat(deque.add(value)).isTrue();
+    assertThat(deque.peekFirst()).isSameInstanceAs(value);
+    assertThat(deque.peekLast()).isSameInstanceAs(value);
+    assertThat(deque).hasSize(1);
   }
 
   @Test(dataProvider = "full")
   public void add_whenPopulated(LinkedDeque<LinkedValue> deque) {
-    LinkedValue value = new LinkedValue(SIZE);
-    assertThat(deque.add(value), is(true));
-    assertThat(deque.peekFirst(), is(not(value)));
-    assertThat(deque.peekLast(), is(value));
-    assertThat(deque, hasSize(SIZE + 1));
+    var value = new LinkedValue(SIZE);
+    assertThat(deque.add(value)).isTrue();
+    assertThat(deque.peekFirst()).isNotSameInstanceAs(value);
+    assertThat(deque.peekLast()).isSameInstanceAs(value);
+    assertThat(deque).hasSize(SIZE + 1);
   }
 
   @Test(dataProvider = "full")
   public void add_whenLinked(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.add(deque.peek()), is(false));
+    assertThat(deque.add(deque.peek())).isFalse();
   }
 
   @Test(dataProvider = "empty")
   public void addFirst_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    LinkedValue value = new LinkedValue(1);
+    var value = new LinkedValue(1);
     deque.addFirst(value);
-    assertThat(deque.peekFirst(), is(value));
-    assertThat(deque.peekLast(), is(value));
-    assertThat(deque, hasSize(1));
+    assertThat(deque.peekFirst()).isSameInstanceAs(value);
+    assertThat(deque.peekLast()).isSameInstanceAs(value);
+    assertThat(deque).hasSize(1);
   }
 
   @Test(dataProvider = "full")
   public void addFirst_whenPopulated(LinkedDeque<LinkedValue> deque) {
-    LinkedValue value = new LinkedValue(SIZE);
+    var value = new LinkedValue(SIZE);
     deque.addFirst(value);
-    assertThat(deque.peekFirst(), is(value));
-    assertThat(deque.peekLast(), is(not(value)));
-    assertThat(deque, hasSize(SIZE + 1));
+    assertThat(deque.peekFirst()).isSameInstanceAs(value);
+    assertThat(deque.peekLast()).isNotSameInstanceAs(value);
+    assertThat(deque).hasSize(SIZE + 1);
   }
 
-  @Test(dataProvider = "full", expectedExceptions = IllegalArgumentException.class)
+  @Test(dataProvider = "full")
   public void addFirst_whenLinked(LinkedDeque<LinkedValue> deque) {
-    deque.addFirst(deque.peek());
+    assertThrows(IllegalArgumentException.class, () -> deque.addFirst(deque.peek()));
   }
 
   @Test(dataProvider = "empty")
   public void addLast_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    LinkedValue value = new LinkedValue(1);
+    var value = new LinkedValue(1);
     deque.addLast(value);
-    assertThat(deque.peekFirst(), is(value));
-    assertThat(deque.peekLast(), is(value));
-    assertThat(deque, hasSize(1));
+    assertThat(deque.peekFirst()).isSameInstanceAs(value);
+    assertThat(deque.peekLast()).isSameInstanceAs(value);
+    assertThat(deque).hasSize(1);
   }
 
   @Test(dataProvider = "full")
   public void addLast_whenPopulated(LinkedDeque<LinkedValue> deque) {
-    LinkedValue value = new LinkedValue(SIZE);
+    var value = new LinkedValue(SIZE);
     deque.addLast(value);
-    assertThat(deque.peekFirst(), is(not(value)));
-    assertThat(deque.peekLast(), is(value));
-    assertThat(deque, hasSize(SIZE + 1));
+    assertThat(deque.peekFirst()).isNotSameInstanceAs(value);
+    assertThat(deque.peekLast()).isSameInstanceAs(value);
+    assertThat(deque).hasSize(SIZE + 1);
   }
 
-  @Test(dataProvider = "full", expectedExceptions = IllegalArgumentException.class)
+  @Test(dataProvider = "full")
   public void addLast_whenLinked(LinkedDeque<LinkedValue> deque) {
-    deque.addLast(deque.peek());
+    assertThrows(IllegalArgumentException.class, () -> deque.addLast(deque.peek()));
   }
 
   @Test(dataProvider = "empty")
   public void addAll_withEmpty(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.addAll(ImmutableList.<LinkedValue>of()), is(false));
-    assertThat(deque, is(deeplyEmpty()));
+    assertThat(deque.addAll(List.of())).isFalse();
+    assertThat(deque).isExhaustivelyEmpty();
   }
 
   @Test(dataProvider = "empty")
   public void addAll_withPopulated(LinkedDeque<LinkedValue> deque) {
-    List<LinkedValue> expected = new ArrayList<>();
+    var expected = new ArrayList<LinkedValue>();
     populate(expected);
-    assertThat(deque.addAll(expected), is(true));
-    assertThat(deque, contains(expected.toArray(new LinkedValue[0])));
+    assertThat(deque.addAll(expected)).isTrue();
+    assertThat(deque).containsExactlyElementsIn(expected).inOrder();
   }
 
   @Test(dataProvider = "full")
+  @SuppressWarnings("ModifyingCollectionWithItself")
   public void addAll_withSelf(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.addAll(deque), is(false));
+    assertThat(deque.addAll(deque)).isFalse();
   }
 
-  /* ---------------- Poll -------------- */
+  /* --------------- Poll --------------- */
 
   @Test(dataProvider = "empty")
   public void poll_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.poll(), is(nullValue()));
+    assertThat(deque.poll()).isNull();
   }
 
   @Test(dataProvider = "full")
   public void poll_whenPopulated(LinkedDeque<LinkedValue> deque) {
-    LinkedValue first = deque.peek();
-    assertThat(deque.poll(), is(first));
-    assertThat(deque, hasSize(SIZE - 1));
-    assertThat(deque.contains(first), is(false));
+    var first = deque.peek();
+    assertThat(deque.poll()).isSameInstanceAs(first);
+    assertThat(deque.contains(first)).isFalse();
+    assertThat(deque).hasSize(SIZE - 1);
   }
 
   @Test(dataProvider = "full")
   public void poll_toEmpty(LinkedDeque<LinkedValue> deque) {
     LinkedValue value;
     while ((value = deque.poll()) != null) {
-      assertThat(deque.contains(value), is(false));
+      assertThat(deque.contains(value)).isFalse();
     }
-    assertThat(deque, is(deeplyEmpty()));
+    assertThat(deque).isExhaustivelyEmpty();
   }
 
   @Test(dataProvider = "empty")
   public void pollFirst_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.pollFirst(), is(nullValue()));
+    assertThat(deque.pollFirst()).isNull();
   }
 
   @Test(dataProvider = "full")
   public void pollFirst_whenPopulated(LinkedDeque<LinkedValue> deque) {
-    LinkedValue first = deque.peekFirst();
-    assertThat(deque.pollFirst(), is(first));
-    assertThat(deque, hasSize(SIZE - 1));
-    assertThat(deque.contains(first), is(false));
+    var first = deque.peekFirst();
+    assertThat(deque.pollFirst()).isSameInstanceAs(first);
+    assertThat(deque.contains(first)).isFalse();
+    assertThat(deque).hasSize(SIZE - 1);
   }
 
   @Test(dataProvider = "full")
   public void pollFirst_toEmpty(LinkedDeque<LinkedValue> deque) {
     LinkedValue value;
     while ((value = deque.pollFirst()) != null) {
-      assertThat(deque.contains(value), is(false));
+      assertThat(deque.contains(value)).isFalse();
     }
-    assertThat(deque, is(deeplyEmpty()));
+    assertThat(deque).isExhaustivelyEmpty();
   }
 
   @Test(dataProvider = "empty")
   public void pollLast_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.pollLast(), is(nullValue()));
+    assertThat(deque.pollLast()).isNull();
   }
 
   @Test(dataProvider = "full")
   public void pollLast_whenPopulated(LinkedDeque<LinkedValue> deque) {
-    LinkedValue last = deque.peekLast();
-    assertThat(deque.pollLast(), is(last));
-    assertThat(deque, hasSize(SIZE - 1));
-    assertThat(deque.contains(last), is(false));
+    var last = deque.peekLast();
+    assertThat(deque.pollLast()).isSameInstanceAs(last);
+    assertThat(deque.contains(last)).isFalse();
+    assertThat(deque).hasSize(SIZE - 1);
   }
 
   @Test(dataProvider = "full")
   public void pollLast_toEmpty(LinkedDeque<LinkedValue> deque) {
     LinkedValue value;
     while ((value = deque.pollLast()) != null) {
-      assertThat(deque.contains(value), is(false));
+      assertThat(deque.contains(value)).isFalse();
     }
-    assertThat(deque, is(deeplyEmpty()));
+    assertThat(deque).isExhaustivelyEmpty();
   }
 
-  /* ---------------- Remove -------------- */
+  /* --------------- Remove --------------- */
 
-  @Test(dataProvider = "empty", expectedExceptions = NoSuchElementException.class)
+  @Test(dataProvider = "empty")
   public void remove_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    deque.remove();
+    assertThrows(NoSuchElementException.class, deque::remove);
   }
 
   @Test(dataProvider = "full")
   public void remove_whenPopulated(LinkedDeque<LinkedValue> deque) {
-    LinkedValue first = deque.peekFirst();
-    assertThat(deque.remove(), is(first));
-    assertThat(deque, hasSize(SIZE - 1));
-    assertThat(deque.contains(first), is(false));
+    var first = deque.peekFirst();
+    assertThat(deque.remove()).isSameInstanceAs(first);
+    assertThat(deque.contains(first)).isFalse();
+    assertThat(deque).hasSize(SIZE - 1);
   }
 
   @Test(dataProvider = "full")
   public void remove_toEmpty(LinkedDeque<LinkedValue> deque) {
     while (!deque.isEmpty()) {
-      LinkedValue value = deque.remove();
-      assertThat(deque.contains(value), is(false));
+      var value = deque.remove();
+      assertThat(deque.contains(value)).isFalse();
     }
-    assertThat(deque, is(deeplyEmpty()));
+    assertThat(deque).isExhaustivelyEmpty();
   }
 
   @Test(dataProvider = "empty")
   public void removeElement_notFound(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.remove(new LinkedValue(0)), is(false));
+    assertThat(deque.remove(new LinkedValue(0))).isFalse();
   }
 
   @Test(dataProvider = "full")
   public void removeElement_whenFound(LinkedDeque<LinkedValue> deque) {
-    LinkedValue first = deque.peekFirst();
-    assertThat(deque.remove(first), is(true));
-    assertThat(deque, hasSize(SIZE - 1));
-    assertThat(deque.contains(first), is(false));
+    var first = deque.peekFirst();
+    assertThat(deque.remove(first)).isTrue();
+    assertThat(deque.contains(first)).isFalse();
+    assertThat(deque).hasSize(SIZE - 1);
   }
 
   @Test(dataProvider = "full")
   public void removeElement_toEmpty(LinkedDeque<LinkedValue> deque) {
     while (!deque.isEmpty()) {
-      LinkedValue value = deque.peek();
-      assertThat(deque.remove(value), is(true));
-      assertThat(deque.contains(value), is(false));
+      var value = deque.peek();
+      assertThat(deque.remove(value)).isTrue();
+      assertThat(deque.contains(value)).isFalse();
     }
-    assertThat(deque, is(deeplyEmpty()));
+    assertThat(deque).isExhaustivelyEmpty();
   }
 
-  @Test(dataProvider = "empty", expectedExceptions = NoSuchElementException.class)
+  @Test(dataProvider = "empty")
   public void removeFirst_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    deque.removeFirst();
+    assertThrows(NoSuchElementException.class, deque::removeFirst);
   }
 
   @Test(dataProvider = "full")
   public void removeFirst_whenPopulated(LinkedDeque<LinkedValue> deque) {
-    LinkedValue first = deque.peekFirst();
-    assertThat(deque.removeFirst(), is(first));
-    assertThat(deque, hasSize(SIZE - 1));
-    assertThat(deque.contains(first), is(false));
+    var first = deque.peekFirst();
+    assertThat(deque.removeFirst()).isSameInstanceAs(first);
+    assertThat(deque.contains(first)).isFalse();
+    assertThat(deque).hasSize(SIZE - 1);
   }
 
   @Test(dataProvider = "full")
   public void removeFirst_toEmpty(LinkedDeque<LinkedValue> deque) {
     while (!deque.isEmpty()) {
-      LinkedValue value = deque.removeFirst();
-      assertThat(deque.contains(value), is(false));
+      var value = deque.removeFirst();
+      assertThat(deque.contains(value)).isFalse();
     }
-    assertThat(deque, is(deeplyEmpty()));
+    assertThat(deque).isExhaustivelyEmpty();
   }
 
-  @Test(dataProvider = "empty", expectedExceptions = NoSuchElementException.class)
+  @Test(dataProvider = "empty")
   public void removeLast_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    deque.removeLast();
+    assertThrows(NoSuchElementException.class, deque::removeLast);
   }
 
   @Test(dataProvider = "full")
   public void removeLast_whenPopulated(LinkedDeque<LinkedValue> deque) {
-    LinkedValue last = deque.peekLast();
-    assertThat(deque.removeLast(), is(last));
-    assertThat(deque, hasSize(SIZE - 1));
-    assertThat(deque.contains(last), is(false));
+    var last = deque.peekLast();
+    assertThat(deque.removeLast()).isSameInstanceAs(last);
+    assertThat(deque.contains(last)).isFalse();
+    assertThat(deque).hasSize(SIZE - 1);
   }
 
   @Test(dataProvider = "full")
   public void removeLast_toEmpty(LinkedDeque<LinkedValue> deque) {
     while (!deque.isEmpty()) {
-      LinkedValue value = deque.removeLast();
-      assertThat(deque.contains(value), is(false));
+      var value = deque.removeLast();
+      assertThat(deque.contains(value)).isFalse();
     }
-    assertThat(deque, is(deeplyEmpty()));
+    assertThat(deque).isExhaustivelyEmpty();
   }
 
   @Test(dataProvider = "empty")
   public void removeFirstOccurrence_notFound(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.removeFirstOccurrence(new LinkedValue(0)), is(false));
+    assertThat(deque.removeFirstOccurrence(new LinkedValue(0))).isFalse();
   }
 
   @Test(dataProvider = "full")
   public void removeFirstOccurrence_whenFound(LinkedDeque<LinkedValue> deque) {
-    LinkedValue first = deque.peekFirst();
-    assertThat(deque.removeFirstOccurrence(first), is(true));
-    assertThat(deque, hasSize(SIZE - 1));
-    assertThat(deque.contains(first), is(false));
+    var first = deque.peekFirst();
+    assertThat(deque.removeFirstOccurrence(first)).isTrue();
+    assertThat(deque.contains(first)).isFalse();
+    assertThat(deque).hasSize(SIZE - 1);
   }
 
   @Test(dataProvider = "full")
   public void removeFirstOccurrence_toEmpty(LinkedDeque<LinkedValue> deque) {
     while (!deque.isEmpty()) {
-      LinkedValue value = deque.peek();
-      assertThat(deque.removeFirstOccurrence(value), is(true));
-      assertThat(deque.contains(value), is(false));
+      var value = deque.peek();
+      assertThat(deque.removeFirstOccurrence(value)).isTrue();
+      assertThat(deque.contains(value)).isFalse();
     }
-    assertThat(deque, is(deeplyEmpty()));
+    assertThat(deque).isExhaustivelyEmpty();
   }
 
   @Test(dataProvider = "empty")
   public void removeLastOccurrence_notFound(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.removeLastOccurrence(new LinkedValue(0)), is(false));
+    assertThat(deque.removeLastOccurrence(new LinkedValue(0))).isFalse();
   }
 
   @Test(dataProvider = "full")
   public void removeLastOccurrence_whenFound(LinkedDeque<LinkedValue> deque) {
-    LinkedValue first = deque.peekFirst();
-    assertThat(deque.removeLastOccurrence(first), is(true));
-    assertThat(deque, hasSize(SIZE - 1));
-    assertThat(deque.contains(first), is(false));
+    var first = deque.peekFirst();
+    assertThat(deque.removeLastOccurrence(first)).isTrue();
+    assertThat(deque.contains(first)).isFalse();
+    assertThat(deque).hasSize(SIZE - 1);
   }
 
   @Test(dataProvider = "full")
   public void removeLastOccurrence_toEmpty(LinkedDeque<LinkedValue> deque) {
     while (!deque.isEmpty()) {
-      LinkedValue value = deque.peek();
-      assertThat(deque.removeLastOccurrence(value), is(true));
-      assertThat(deque.contains(value), is(false));
+      var value = deque.peek();
+      assertThat(deque.removeLastOccurrence(value)).isTrue();
+      assertThat(deque.contains(value)).isFalse();
     }
-    assertThat(deque, is(deeplyEmpty()));
+    assertThat(deque).isExhaustivelyEmpty();
   }
 
   @Test(dataProvider = "empty")
   public void removeAll_withEmpty(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.removeAll(ImmutableList.of()), is(false));
-    assertThat(deque, is(deeplyEmpty()));
+    assertThat(deque.removeAll(List.of())).isFalse();
+    assertThat(deque).isExhaustivelyEmpty();
   }
 
   @Test(dataProvider = "full")
   public void remove_withPopulated(LinkedDeque<LinkedValue> deque) {
-    LinkedValue first = deque.peekFirst();
-    assertThat(deque.removeAll(ImmutableList.of(first)), is(true));
-    assertThat(deque, hasSize(SIZE - 1));
-    assertThat(deque.contains(first), is(false));
+    var first = deque.peekFirst();
+    assertThat(deque.removeAll(List.of(first))).isTrue();
+    assertThat(deque.contains(first)).isFalse();
+    assertThat(deque).hasSize(SIZE - 1);
   }
 
   @Test(dataProvider = "full")
   public void removeAll_toEmpty(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.removeAll(ImmutableList.copyOf(deque)), is(true));
-    assertThat(deque, is(deeplyEmpty()));
+    assertThat(deque.removeAll(List.copyOf(deque))).isTrue();
+    assertThat(deque).isExhaustivelyEmpty();
   }
 
-  /* ---------------- Stack -------------- */
+  /* --------------- Stack --------------- */
 
   @Test(dataProvider = "empty")
   public void push_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    LinkedValue value = new LinkedValue(1);
+    var value = new LinkedValue(1);
     deque.push(value);
-    assertThat(deque.peekFirst(), is(value));
-    assertThat(deque.peekLast(), is(value));
-    assertThat(deque, hasSize(1));
+    assertThat(deque.peekFirst()).isSameInstanceAs(value);
+    assertThat(deque.peekLast()).isSameInstanceAs(value);
+    assertThat(deque).hasSize(1);
   }
 
   @Test(dataProvider = "full")
   public void push_whenPopulated(LinkedDeque<LinkedValue> deque) {
-    LinkedValue value = new LinkedValue(SIZE);
+    var value = new LinkedValue(SIZE);
     deque.push(value);
-    assertThat(deque.peekFirst(), is(value));
-    assertThat(deque.peekLast(), is(not(value)));
-    assertThat(deque, hasSize(SIZE + 1));
+    assertThat(deque.peekFirst()).isSameInstanceAs(value);
+    assertThat(deque.peekLast()).isNotSameInstanceAs(value);
+    assertThat(deque).hasSize(SIZE + 1);
   }
 
-  @Test(dataProvider = "full", expectedExceptions = IllegalArgumentException.class)
+  @Test(dataProvider = "full")
   public void push_whenLinked(LinkedDeque<LinkedValue> deque) {
-    deque.push(deque.peek());
+    assertThrows(IllegalArgumentException.class, () -> deque.push(deque.peek()));
   }
 
-  @Test(dataProvider = "empty", expectedExceptions = NoSuchElementException.class)
+  @Test(dataProvider = "empty")
   public void pop_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    deque.pop();
+    assertThrows(NoSuchElementException.class, deque::pop);
   }
 
   @Test(dataProvider = "full")
   public void pop_whenPopulated(LinkedDeque<LinkedValue> deque) {
-    LinkedValue first = deque.peekFirst();
-    assertThat(deque.pop(), is(first));
-    assertThat(deque, hasSize(SIZE - 1));
-    assertThat(deque.contains(first), is(false));
+    var first = deque.peekFirst();
+    assertThat(deque.pop()).isSameInstanceAs(first);
+    assertThat(deque.contains(first)).isFalse();
+    assertThat(deque).hasSize(SIZE - 1);
   }
 
   @Test(dataProvider = "full")
   public void pop_toEmpty(LinkedDeque<LinkedValue> deque) {
     while (!deque.isEmpty()) {
-      LinkedValue value = deque.pop();
-      assertThat(deque.contains(value), is(false));
+      var value = deque.pop();
+      assertThat(deque.contains(value)).isFalse();
     }
-    assertThat(deque, is(deeplyEmpty()));
+    assertThat(deque).isExhaustivelyEmpty();
   }
 
-  /* ---------------- Iterators -------------- */
+  /* --------------- Iterators --------------- */
 
-  @Test(dataProvider = "empty", expectedExceptions = NoSuchElementException.class)
+  @Test(dataProvider = "empty")
   public void iterator_noMoreElements(LinkedDeque<LinkedValue> deque) {
-    deque.iterator().next();
+    var iterator = deque.iterator();
+    assertThrows(NoSuchElementException.class, iterator::next);
   }
 
   @Test(dataProvider = "empty")
   public void iterator_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.iterator().peek(), is(nullValue()));
-    assertThat(deque.iterator().hasNext(), is(false));
+    assertThat(deque.iterator().hasNext()).isFalse();
+    assertThat(deque.iterator().peek()).isNull();
   }
 
   @Test(dataProvider = "full")
   public void iterator_whenWarmed(LinkedDeque<LinkedValue> deque) {
-    List<LinkedValue> expected = new ArrayList<>();
+    var expected = new ArrayList<LinkedValue>();
     populate(expected);
 
-    assertThat(deque.peek(), is(not(nullValue())));
-    assertThat(elementsEqual(deque.iterator(), expected.iterator()), is(true));
+    assertThat(deque.peek()).isNotNull();
+    assertThat(Iterators.size(deque.iterator())).isEqualTo(deque.size());
+    assertThat(elementsEqual(deque.iterator(), expected.iterator())).isTrue();
   }
 
-  @Test(dataProvider = "full", expectedExceptions = UnsupportedOperationException.class)
+  @Test(dataProvider = "full")
   public void iterator_removal(LinkedDeque<LinkedValue> deque) {
-    deque.iterator().remove();
+    var iterator = deque.iterator();
+    var value = iterator.next();
+    iterator.remove();
+
+    int remaining = 0;
+    while (iterator.hasNext()) {
+      assertThat(iterator.next()).isNotSameInstanceAs(value);
+      remaining++;
+    }
+    assertThat(remaining).isEqualTo(SIZE - 1);
+    assertThat(deque).hasSize(SIZE - 1);
   }
 
-  @Test(dataProvider = "empty", expectedExceptions = NoSuchElementException.class)
+  @Test(dataProvider = "full")
+  public void iterator_removal_exception(LinkedDeque<LinkedValue> deque) {
+    var iterator = deque.iterator();
+    iterator.next();
+    iterator.remove();
+    assertThrows(IllegalStateException.class, iterator::remove);
+  }
+
+  @Test(dataProvider = "empty")
   public void descendingIterator_noMoreElements(LinkedDeque<LinkedValue> deque) {
-    deque.descendingIterator().next();
+    var iterator = deque.descendingIterator();
+    assertThrows(NoSuchElementException.class, iterator::next);
   }
 
   @Test(dataProvider = "empty")
   public void descendingIterator_whenEmpty(LinkedDeque<LinkedValue> deque) {
-    assertThat(deque.descendingIterator().peek(), is(nullValue()));
-    assertThat(deque.descendingIterator().hasNext(), is(false));
+    assertThat(deque.descendingIterator().hasNext()).isFalse();
+    assertThat(deque.descendingIterator().peek()).isNull();
   }
 
   @Test(dataProvider = "full")
   public void descendingIterator_whenWarmed(LinkedDeque<LinkedValue> deque) {
-    List<LinkedValue> expected = new ArrayList<>();
+    var expected = new ArrayList<LinkedValue>();
     populate(expected);
     Collections.reverse(expected);
 
-    assertThat(deque.descendingIterator().peek(), is(not(nullValue())));
-    assertThat(elementsEqual(deque.descendingIterator(), expected.iterator()), is(true));
+    assertThat(deque.descendingIterator().peek()).isNotNull();
+    assertThat(elementsEqual(deque.descendingIterator(), expected.iterator())).isTrue();
   }
 
-  @Test(dataProvider = "full", expectedExceptions = UnsupportedOperationException.class)
+  @Test(dataProvider = "full")
   public void descendingIterator_removal(LinkedDeque<LinkedValue> deque) {
-    deque.descendingIterator().remove();
+    var iterator = deque.descendingIterator();
+    var value = iterator.next();
+    iterator.remove();
+
+    int remaining = 0;
+    while (iterator.hasNext()) {
+      assertThat(iterator.next()).isNotEqualTo(value);
+      remaining++;
+    }
+    assertThat(remaining).isEqualTo(SIZE - 1);
+    assertThat(deque).hasSize(SIZE - 1);
   }
 
   @Test(dataProvider = "full")
   public void concat(LinkedDeque<LinkedValue> deque) {
-    List<LinkedValue> expect = ImmutableList.copyOf(
+    var expect = ImmutableList.copyOf(
         Iterators.concat(deque.iterator(), deque.descendingIterator()));
     Iterable<LinkedValue> actual = () -> PeekingIterator.concat(
         deque.iterator(), deque.descendingIterator());
-    assertThat(actual, contains(expect.toArray(new LinkedValue[0])));
+    assertThat(actual).containsExactlyElementsIn(expect).inOrder();
   }
 
-  @Test(dataProvider = "empty", expectedExceptions = NoSuchElementException.class)
+  @Test(dataProvider = "full")
+  public void concat_peek(LinkedDeque<LinkedValue> deque) {
+    var iterator = PeekingIterator.concat(deque.iterator(), deque.iterator());
+    while (iterator.hasNext()) {
+      var expected = iterator.peek();
+      assertThat(iterator.next()).isEqualTo(expected);
+    }
+    assertThat(iterator.peek()).isNull();
+  }
+
+  @Test(dataProvider = "empty")
   public void concat_noMoreElements(LinkedDeque<LinkedValue> deque) {
-    PeekingIterator.concat(deque.iterator(), deque.iterator()).next();
+    var iterator = PeekingIterator.concat(deque.iterator(), deque.iterator());
+    assertThrows(NoSuchElementException.class, iterator::next);
   }
 
   @Test(dataProvider = "full")
   public void comparing(LinkedDeque<LinkedValue> deque) {
-    List<LinkedValue> expect = ImmutableList.copyOf(
+    var expect = ImmutableList.copyOf(
         Iterators.concat(deque.iterator(), deque.descendingIterator()));
-    PeekingIterator<LinkedValue> actual = PeekingIterator.comparing(
-        deque.iterator(), deque.descendingIterator(), (a, b) -> 1);
-    assertThat(actual.peek(), is(expect.get(0)));
-    assertThat((Iterable<LinkedValue>) () -> actual, contains(expect.toArray(new LinkedValue[0])));
+    var actual = PeekingIterator.comparing(
+        deque.iterator(), deque.descendingIterator(), comparator().reversed());
+    assertThat(actual.peek()).isEqualTo(expect.get(0));
+    assertThat(ImmutableList.copyOf(actual)).containsExactlyElementsIn(expect).inOrder();
   }
 
   @Test(dataProvider = "full")
   public void comparing_uneven(LinkedDeque<LinkedValue> deque) {
-    PeekingIterator<LinkedValue> empty = new AccessOrderDeque<LinkedValue>().iterator();
-    PeekingIterator<?> left = PeekingIterator.comparing(deque.iterator(), empty, (a, b) -> 1);
-    PeekingIterator<?> right = PeekingIterator.comparing(deque.iterator(), empty, (a, b) -> 1);
+    var empty = new AccessOrderDeque<LinkedValue>().iterator();
+    var left = PeekingIterator.comparing(deque.iterator(), empty, comparator().reversed());
+    var right = PeekingIterator.comparing(empty, deque.iterator(), comparator().reversed());
 
-    assertThat(left.peek(), is(deque.getFirst()));
-    assertThat(right.peek(), is(deque.getFirst()));
+    assertThat(left.peek()).isEqualTo(deque.getFirst());
+    assertThat(right.peek()).isEqualTo(deque.getFirst());
   }
 
-  /* ---------------- Deque providers -------------- */
+  private static Comparator<LinkedValue> comparator() {
+    return Comparator.comparingInt((LinkedValue v) -> v.value);
+  }
+
+  /* --------------- Deque providers --------------- */
 
   @DataProvider(name = "empty")
   public Object[][] providesEmptyDeque() {
@@ -799,8 +852,8 @@ public final class LinkedDequeTest {
 
   @DataProvider(name = "full")
   public Object[][] providesWarmedDeque() {
-    Deque<LinkedValue> accessOrder = new AccessOrderDeque<LinkedValue>();
-    Deque<LinkedValue> writeOrder = new WriteOrderDeque<LinkedValue>();
+    var accessOrder = new AccessOrderDeque<LinkedValue>();
+    var writeOrder = new WriteOrderDeque<LinkedValue>();
     populate(accessOrder);
     populate(writeOrder);
     return new Object[][] { { accessOrder }, { writeOrder }};
@@ -813,69 +866,50 @@ public final class LinkedDequeTest {
   }
 
   static final class LinkedValue implements AccessOrder<LinkedValue>, WriteOrder<LinkedValue> {
-    LinkedValue prev;
-    LinkedValue next;
     final int value;
+
+    @Nullable LinkedValue prev;
+    @Nullable LinkedValue next;
 
     LinkedValue(int value) {
       this.value = value;
     }
-
-    @Override
-    public LinkedValue getPreviousInAccessOrder() {
+    @Override public @Nullable LinkedValue getPreviousInAccessOrder() {
       return prev;
     }
-
-    @Override
-    public void setPreviousInAccessOrder(LinkedValue prev) {
+    @Override public void setPreviousInAccessOrder(@Nullable LinkedValue prev) {
       this.prev = prev;
     }
-
-    @Override
-    public LinkedValue getNextInAccessOrder() {
+    @Override public @Nullable LinkedValue getNextInAccessOrder() {
       return next;
     }
-
-    @Override
-    public void setNextInAccessOrder(LinkedValue next) {
+    @Override public void setNextInAccessOrder(@Nullable LinkedValue next) {
       this.next = next;
     }
-
-    @Override
-    public LinkedValue getPreviousInWriteOrder() {
+    @Override public @Nullable LinkedValue getPreviousInWriteOrder() {
       return prev;
     }
-
-    @Override
-    public void setPreviousInWriteOrder(LinkedValue prev) {
+    @Override public void setPreviousInWriteOrder(@Nullable LinkedValue prev) {
       this.prev = prev;
     }
-
-    @Override
-    public LinkedValue getNextInWriteOrder() {
+    @Override public @Nullable LinkedValue getNextInWriteOrder() {
       return next;
     }
-
-    @Override
-    public void setNextInWriteOrder(LinkedValue next) {
+    @Override public void setNextInWriteOrder(@Nullable LinkedValue next) {
       this.next = next;
     }
-
-    @Override
-    public boolean equals(Object o) {
+    @Override public boolean equals(Object o) {
       return (o instanceof LinkedValue) && (value == ((LinkedValue) o).value);
     }
-
-    @Override
-    public int hashCode() {
+    @Override public int hashCode() {
       return value;
     }
-
-    @Override
-    public String toString() {
-      return String.format("value=%s prev=%s, next=%s]", value,
-          (prev == null) ? null : prev.value,
-          (next == null) ? null : next.value);
+    @Override public String toString() {
+      return MoreObjects.toStringHelper(this)
+          .add("value", value)
+          .add("prev", (prev == null) ? null : prev.value)
+          .add("next", (next == null) ? null : next.value)
+          .toString();
     }
   }
 }
